--- a/다울 2024-02-22.md
+++ b/다울 2024-02-22.md
@@ -126,7 +126,7 @@ int index = Convert.ToInt32(listViewPhoneBook.Items[pos].SubItems[0].Text);
 ![[temp/dotnet 윈폼 폼 팝업으로 여러 개 사용]]
 
 
-![[temp/4. Archive/attachment/2024-02-22 2024-02-22, 11.43.15.excalidraw]]
+![[../4. Archive/attachment/2024-02-22 2024-02-22, 11.43.15.excalidraw]]
 
 
 
