--- a/다울 2024-02-28.md
+++ b/다울 2024-02-28.md
@@ -4,7 +4,7 @@ created: 2024-02-28 08:08
 aliases: 
 tags:
 ---
-![[Git 브랜치 전략]]
+![[temp/Git 브랜치 전략]]
 
 
 [[temp/주소록 0,0.1v 피드백 내용|주소록 0,0.1v 피드백 내용]]
@@ -34,7 +34,7 @@ sql로 distinct 키워드를 사용해서 항목 목록을 가져오기
 
 [[temp/다울 과제 에러노트|다울 과제 에러노트]]
 
-[[../Git 브랜치 전략|Git 브랜치 전략]]
+[[temp/Git 브랜치 전략|Git 브랜치 전략]]
 
 주소록 회의에서 발표? 
 날짜 정하기
