--- a/다울 2024-02-26.md
+++ b/다울 2024-02-26.md
@@ -32,7 +32,7 @@ tags:
 
 ![[temp/회사 가까운 원룸 구할까 말까]]
 
-[[temp/dotnet DataGridView|dotnet DataGridView]]
+[[temp/DataGridView 컨트롤|DataGridView 컨트롤]]
 
 
 윈폼에서 this
