--- a/다울 2024-03-04.md
+++ b/다울 2024-03-04.md
@@ -4,6 +4,7 @@ created: 2024-03-04 08:01
 aliases: 
 tags:
 ---
+[[다울 2024-02-29|저번주 금요일]] | [[다울 2024-03-05|내일]]
 ###### 인덱스 범위가 음수를 벗어났다.
 
 [[temp/주소록 0,0.1v 피드백 내용|주소록 0,0.1v 피드백 내용]]
