--- a/다울 2024-03-05.md
+++ b/다울 2024-03-05.md
@@ -4,11 +4,11 @@ created: 2024-03-05 08:05
 aliases: 
 tags:
 ---
-[[다울 2024-03-04|어제]]
+[[다울 2024-03-04|어제]]|[[temp/다울 2024-03-06]]
 
 ###### 선석배정 및 하역계획 윈폼 프로젝트 인수인계 받기
 오늘부터 이번 주 4일간
-[[temp/선석배정 및 하역계획 인수인계]]
+[[../noGitSync/선석배정 및 하역계획 인수인계]]
 
 엑셀 오브젝트 생성 과정
 엑셀 오브젝트를 생성하는 과정은 엑셀 파일을 프로그래밍적으로 조작하기 위한 인터페이스를 제공합니다. 각각의 객체는 엑셀 파일의 구조를 나타내며 데이터를 조작하고 표시하는 데 사용됩니다.
