end before 30mm

--- a/다울 2024-03-07.md
+++ b/다울 2024-03-07.md
@@ -26,3 +26,10 @@ tags:
 2년차에 청년 300, 회사 150
 이렇게 받아감
 
+# svn 설명
+svn commit, update 할때 폴더 통째로
+
+여기서 bin에서 commit 컴플릭트 나면 delete하고 update하면 사라짐
+신경 안써도 됨
+
+
