branch lab test

--- a/다울 2024-03-07.md
+++ b/다울 2024-03-07.md
@@ -4,7 +4,7 @@ created: 2024-03-07 08:14
 aliases: 
 tags:
 ---
-
+[[다울 2024-03-06|어제]]
 ###### 김종광이사님 코드 살펴보기
 [[../noGitSync/김종광이사님 코드 살펴보기]]
 
@@ -31,5 +31,353 @@ svn commit, update 할때 폴더 통째로
 
 여기서 bin에서 commit 컴플릭트 나면 delete하고 update하면 사라짐
 신경 안써도 됨
+
+
+조건 없이 들어오면 0
+초기가 아닌 상태 
+날짜가 다르고 또 다르다
+
+
+fsSpread1_Sheet1
+이게 스프레드 1번의 sheet
+
+sheetView1
+이게 스프레드3번
+
+sheetView2
+
+sheetView4가 맨 아래. 
+스프레드2번
+
+FarPointSheet의 edit cell로 보는게 맞을듯
+
+# 화면 바뀐 거 설명
+## DB 새로 생긴 거
+초기 선석배정 하역계획 화면 v.2.9.3
+선석배정과 하역계획이 따로 있었다.
+회의 결과 두 화면을 한번에 보여주자
+하나로 합치자
+
+
+데이터베이스 설계 v.2.9.8 파일 참고
+
+하역작업계획 - 선석배정 및 하역계획 (ai 편성)
+
+선석배정계획 화면이 업데이트됨
+내일 회의에서 확정 관련될듯
+좀더 보완 수정될게 있는지 회의할듯
+
+## 조업자 워크풀로
+1
+맨 처음 하역작업계획 화면으로 들어옴
+입항 예정 정보가 있고 그 안에 선박 데이터가 보임
+ai에 쓰일 선박들을 선택해서 ai결과예측 버튼을 눌러
+ai가 짜준 예정정보가 화면에 표시
+빈 네모 상태
+ai 예측 결과 박스가 화면에 표시됨
+6선석 스프레드 아래에 ai예측 작업자편성 비교 테이블에 
+ai 예측 데이터가 표시됨
+
+2
+사용자가 ai 결과를 마우스로 수정한다 
+수정하면 
+case 1 작업을 늘린거나 줄인다
+
+case 2 작업 시작일을 옮긴다
+
+case 3 선석을 옮긴다.
+
+case n-2 배를 하나 더 넣음?? 뜬금없는 배가 왔어. db엔 없어. 조업자가 알아서 넣어야지 뭐
+이거 ai가??? 난모름
+
+
+case n-1 계획을 삭제
+삭제를 하면 입항예정정보 안으로 배 정보가 다시 표시되어야 하나?
+
+case n 이것저것 다함
+
+case n+1 초기화를 눌러버림
+배 정보가 다 다시 입항예정정보 밑에 스프레드로 돌아와
+
+빈 네모는 빈 마름모가 되고
+기존 화면 정보는 안 보이도록 숨겨지고 수정된 화면이 보임
+
+안한다
+
+ai 선택, 예측 결과버튼 누르는 것까지 동일
+
+작업자가 옮긴 선박에 대해서 작업시간, 조체선료, 효율지수가 비교테이블에 보임
+
+4
+사용자가 비교 테이블에서 확정 누르고
+편성지시 확정 버튼을 누름
+빈 네모, 빈 마름모가 색칠되고
+끝.
+
+---
+
+
+
+
+새로운 화면은 일주일치 계획만 보여줌.
+선석이 있고
+선석아래 해당하는 가동가능한 하역기가 표시됨
+
+빈네모
+ai가 짜준 결과 (예정)
+
+꽉찬 네모
+확정된 ai 결과
+
+빈 마름모
+빈 네모에서 사용자가 수정한 일정을 표시 (예정)
+
+꽉찬 마름모는
+확정된 계획 일정
+
+## db 질문
+### plan2 의 VIEW 컬럼 
+화면 0, 1
+화면보기
+
+ai 예측이 화면에 보여야
+화면보기??
+
+나온 걸 조업자가 늘이고 줄여서 바꿈
+그럼 이걸 그대로 복사해서?
+복사가 아니라 
+
+기존 화면은 0. 안보이게
+데이터는 남아있어.
+
+조업자가 수정한 화면이 1. 보이게
+
+선박은 똑같아.
+0이면 화면에 셀에서만 안보인다.
+
+
+### order2 db는 확정일 때 plan2에 있는 걸 그대로 INSERT
+
+16번 컬럼. DECISION 편성확정여부 0, 1
+ai 확정이면 ai게 1
+조업자가 확정이면 조업자 걸 1로
+
+순번열로
+
+구현하는 입장
+plan2를 뿌려
+숨은 열이 있어.
+순번 1번, 순번 2번
+10건이 있으면 10건 인서트
+순번이 있으면 order2의 16번 컬럼
+확정순번만 기억하고 있다가 인서트칠 때 
+그 순번이 포함되어 있으면 1 확정 | 아니면 0 
+
+db에서 옮길 때 좀 까다로움
+옮기거나 줄이거나 늘이거나
+작업자가 바꿨을 때
+참고해야할 정보
+선석, 일자, 
+시작, 완료 바뀜....
+다 바뀜. 
+선박만 안바뀐다
+
+바뀐대로 정보를 만들어야
+
+plan2 의 16번 컬럼 VIEW가 바뀐건 1, 이전 건 0
+
+정보 둘을 비교해야해서
+레코드 단위로 새로 생기고
+기존 거 안보이게 하고
+새로운거 보이게
+
+기존 테이블 TB_DOCK_order
+주황색은 안쓰고 
+2를 쓴다.
+ai가 짜준 거에 작업자가 변경한 걸 
+
+확정된 걸 order에 올린다.
+
+oder2랑 plan2 조인
+order2는 확정
+레코드 2개 중에 확정된 것만 가져와야함
+
+plan2에서는 
+레코드 2개 중에 화면보기가 1이된 걸 가져와야함
+
+dock플랜은 선석
+
+하역계획편석
+일자, 근무조, 선석코드, 선박코드, 홀드별로 브랜드 하역량
+
+드래그를 해서 옮기면 기존 거 안보이게
+확정된 게 아니니까 네모를 빈 마름모로 변경
+
+
+
+---
+
+작업일자 편성 및 선석 이동
+
+화살표가 있으면 화살표 있는 것끼리 이어진다
+빨간 화살표는 일정 늘이기
+내가 넣을거임
+
+하역계획 상세보기는 더블클릭
+
+더블클릭하면 나오는 계획
+
+어떤 하역기가 배치가 된다는 정보를 표시함
+ai결과로 확정 되기 전에도 하역기가 나옴
+
+
+조업자가 변경하면
+
+---
+
+원래를 쓸건지 변경한 걸 쓸건지 선택하도록
+선택하면 확정됨
+
+배가 어떤 브랜드 얼만큼 갖고 있는지
+선적량은 총량
+잔량은 총량 빼기 작업량이겠네. 배에 남은 잔량
+
+하역량은 지정된 하역기가 이만큼 나른다는 뜻
+하역기 컬럼은 하역기 이름
+야드는 어떤 야드로 갈지. 브랜드가 들어갈 야드.
+
+
+워크플로
+입항예정정보에서 선박 선택
+더블클릭
+
+ai 예측 결과 버튼을 눌러
+기존에 확정된 애들은 ai가 못건드린다
+작업중이니까
+
+ai 예측 결과버튼 아래에
+네모 박스?? 메시지 박스?? 팝업?? 아니면 화면에 컨트롤로 박아?
+작업 시작일자
+근무조 : 주간 야간
+적용기준 : 작업시간, 조체선료, 작업효율지수
+선박목록 : 선박명, 선박명, ... , 선박명
+확인, 취소
+
+
+이항 했으면 
+왼쪽 세모 : 이항 전
+오른쪽 세모 : 이항 후
+
+## 일정
+3월 재설계획 ? 
+3월 26일까지 화면이 변경 가능성 있음.
+
+그 후에도 화면설계는 바뀔 수 있다.
+
+전체 일정은 나스에
+경로
+국가연구과제/사업관리/과제수행일지/24년도 추진일정.
+여기에 전체 일정을 알 수 있음.
+
+큰그림에 참고
+
+### AI 알고리즘 
+8월에 ai 알고리즘이 완성될 예정
+0801~10 에 ai 연동 테스트 진행 예정
+
+지금 작업은 수동기능이 잘 작동하도록 하는게 목표
+
+드래그 기능
+선박 옮기는 기능
+시작 일 그대로 종료일을 옮기는 기능
+시작일을 옮기는 기능
+선석을 옮기는 기능
+
+선석현황정보 화면
+여기도 수정사항 나오면 바꿔야함.
+
+
+데이터베이스 설계에서 주황색은 없어지는 테이블
+
+plan2 order2는 새로 생기는 테이블
+
+tb_dock_work 테이블. 현재 데이터 있음
+tb_unload_work 테이블. 현재 데이터 있음.
+
+up선석작업현황 화면을 여기서 반영함
+
+화면에 보여주려고 넣어놓은 데이터
+
+tb_dock_result 이 테이블은 안쓴다.
+tb_unload_result도 아무것도 없음
+
+tb_port_entry 는 입항예정 정보
+
+
+tb_com_unload 
+하역기 어떤게 있는지 표시
+전체 하역기 다 나옴
+MW_LIST는 선석코드
+UL_CD는 하역기 코드
+UL_STATUS는 하역기 상태
+UL_POS 는 위치
+UL_WAY 는 방향
+
+tb_ship_hold 배에 어떤 브랜드 얼마나 ? 실려있는지
+홀드 코드 코드
+
+
+
+tb_
+
+주황색은 지워질 테이블
+v.2.9.8 로 노란 표시가 되어 있으면 이번회으로 추가된 테이블
+
+
+
+최대 홀 개수는 11개
+1~ 11까지 이미지 준비되어 있음.
+더 큰 배가 있을 수도 있지만 11개1 짜리로 이미지 만들었음.
+
+선박의 위치에 따라 어디 보고 있는지
+계류장치 번호
+
+
+드로우 로직
+로드 될 때 work 테이블에서 가져온다.
+독워크 언로드워크에서 가져와서 화면에 뿌림
+
+화면이 1초마다 리프레쉬
+
+###### 타이머 틱 1초
+
+###### 비트맵
+###### 그래픽스
+
+픽쳐박스에 담는게 아니라 비트맵으로 그림
+픽처박스는 네모로 해서 뒷배경이 화면을 가려버림
+비트맵은 png이미지만 보이게 처리됨
+
+###### 수세장?? 
+수세장 용어가 뭔지는 모름. 스마트보드 화면 참고해서 넣은 요소
+
+
+`List<color>` 색깔 쓰는건 지정 안되어 있고
+
+색깔은 어디서 왔으려나
+선석에 있는 거 빠지고 
+
+새 화면에서
+일정은 노란색
+csu는 주황색
+gtsu01 초록
+
+하역기 종류가 많으니까 색깔은 나중에 정해진 대로 반영해야할듯
+
+궁금한거 이해 안되는 거를 가져와서 
+내일까지 물어봐야함
+
+선석배정에서 어떤 일을 하는지
+
 
 
