--- a/다울 2024-02-27.md
+++ b/다울 2024-02-27.md
@@ -42,7 +42,7 @@ tags: [journal]
 ![[temp/윈폼에서 row 데이터를 List에 담아서 넘기는 코드]]
 
 ###### 02-27 c 작업에 대한 고민
-![[temp/02-27 CSharp  작업에 대한 고민]]
+![[temp/dotnet/02-27 CSharp  작업에 대한 고민]]
 
 엑셀로 데이터 내보내기
 참조 링크 : https://link2me.tistory.com/822
