--- a/다울 2024-03-11.md
+++ b/다울 2024-03-11.md
@@ -29,8 +29,13 @@ tags:
 ![[journals/temp/vs 익스텐션 목록]]
 
 [[../noGitSync/선석배정 및 하역계획 인수인계|선석배정 및 하역계획 인수인계]]
-
+[[../noGitSync/선석배정 및 하역계획 DB 학습중|선석배정 및 하역계획 DB 학습중]]
 ### 김종광이사님 코드 보면서 학습
 up하역작업계획.cs 클리어
 약 500줄?
 
+[[../noGitSync/김종광이사님 코드 살펴보기|김종광이사님 코드 살펴보기]]
+
+
+###### 계류시설
+![[journals/temp/계류시설]]
