--- a/다울 2024-03-19.md
+++ b/다울 2024-03-19.md
@@ -98,3 +98,8 @@ public void ColumnFormatDateTime(string columnName, string formatString)
 
 원격 소스 백업
 나스 app 서버 정보에서 찾음
+
+[[temp/김선민 사원의 소스코드 설명|김선민 사원의 소스코드 설명]]
+
+## fpSpread 에서 배경의 하늘색은 지울 수 없음.
+
