--- a/다울 2024-02-29.md
+++ b/다울 2024-02-29.md
@@ -29,7 +29,7 @@ insert폼 부서, 직책 가져오기
 
 
 ###### visual studio 단축키
-![[temp/visual studio 단축키|visual studio 단축키]]
+![[temp/vs 단축키|vs 단축키]]
 
 
 nunit 테스트 참고 링크
