--- a/다울 2024-03-13.md
+++ b/다울 2024-03-13.md
@@ -21,7 +21,7 @@ backup\\yyyyMMdd 폴더 생성
 
 ![[Pasted image 20240313131451.png]]
 
-[[temp/visual studio 단축키|visual studio 단축키]]
+[[temp/vs 단축키|vs 단축키]]
 
 [[과제 수행일지]]
 
