--- a/다울 2024-03-14.md
+++ b/다울 2024-03-14.md
@@ -13,7 +13,7 @@ tags:
 
 
 # vs 단축키
-[[temp/visual studio 단축키|visual studio 단축키]]
+[[temp/vs 단축키|vs 단축키]]
 ctrl k v : 클래스뷰 검색 콤보로 이동
 
 사용자 지정 단축키 
