--- a/다울 2024-03-18.md
+++ b/다울 2024-03-18.md
@@ -19,7 +19,7 @@ tags:
 [[temp/Spread 코드 라이브러리 컬럼명 설정|Spread 코드 라이브러리 컬럼명 설정]]
 
 
-[[temp/visual studio 단축키|visual studio 단축키]]
+[[temp/vs 단축키|vs 단축키]]
 **1. Shift + Alt + W, N**
 동일한 파일의 창을 하나 더 연다
 **2. Shift + Alt + W, V**
