--- a/다울 2024-03-26.md
+++ b/다울 2024-03-26.md
@@ -11,7 +11,7 @@ tags:
 
 [[temp/김선민 사원의 소스코드 설명|김선민 사원의 소스코드 설명]]
 
-[[temp/visual studio 단축키|visual studio 단축키]]
+[[temp/vs 단축키|vs 단축키]]
 ctrl R ctrl M : 리펙토링, 메서드 추출
 
 ### 하역기 정보 표시
@@ -21,4 +21,18 @@ ctrl R ctrl M : 리펙토링, 메서드 추출
 선박 이안하면 하역기 안보이게
 
 하역기는 더블클릭해서 팝업으로 추가할 수
+
+[[temp/fps SheetView 클래스 메서드|fps SheetView 클래스 메서드]]
+
+compareSpread 는  
+"11", "12", "13", "14", "15", "16", ai
+"21", "22", "23", "24", "25", "26" 조업자 
+
+dataset을 가져와서
+1은 확정
+2 선박명
+3 선석
+4 작업시간
+5 조체선료
+6 작업효율지수
 
