--- a/다울 2024-03-25.md
+++ b/다울 2024-03-25.md
@@ -5,7 +5,8 @@ aliases:
 tags:
 ---
 - [x] 나스 솔루션 link, source 백업하기 ✅ 2024-03-25
-
+저번주 금요일 : [[다울 2024-03-22]]
+[[다울 2024-03-26]]
 ## 오늘 목표
 ###### 선석 선박 정보
 ###### 하역기 정보 표시
