--- a/다울 2024-04-05.md
+++ b/다울 2024-04-05.md
@@ -4,9 +4,9 @@ created: 2024-04-05 07:59
 aliases: 
 tags:
 ---
-- [ ] 나스 솔루션 link, source 백업하기
+- [x] 나스 솔루션 link, source 백업하기 ✅ 2024-04-08
 Yesterday: [[다울 2024-04-04]]
-Tomorrow: [[다울 2024-04-06]]
+다음 주 금: [[다울 2024-04-08]]
 
 ## 오늘 작업 목표
 [[temp/다울 4월 개인 업무 일정|다울 4월 개인 업무 일정]]
