--- a/다울 2024-03-29.md
+++ b/다울 2024-03-29.md
@@ -100,7 +100,7 @@ bool containsValue3 = hashtable.ContainsValue("Value3"); // false 반환
 
 #### 런타임 익셉션
 [[temp/런타임 익셉션|런타임 익셉션]]
-[[temp/InteropServices.ExternalException|InteropServices.ExternalException]] 발생
+[[temp/InteropServices ExternalException|InteropServices ExternalException]] 발생
 sheet에서 마우스 dragOver중에 밖으로 빠져나가면 발생. 뭐가 문제일까
 
 ### 업무일지는 오늘 퇴근 전
