--- a/다울 2024-04-09.md
+++ b/다울 2024-04-09.md
@@ -6,13 +6,13 @@ tags:
 ---
 - [x] 나스 솔루션 link, source 백업하기 ✅ 2024-04-09
 Yesterday: [[다울 2024-04-08]]
-Tomorrow: [[다울 2024-04-10]]
+목요일: [[다울 2024-04-11]]
 
 ## 오늘 작업 목표
 - [x] 선석배치된 선박을 Drag&Drop으로 일정이동 (~04.05) ✅ 2024-04-09
 	- [x] 드롭 시에 테그에 m_flag 정보 x s m e 정보를 저장 ✅ 2024-04-09 UpdateCellWithTagAndColor() 메서드 
 - [x] 입항 예정정보 insert하고 시트에 태그 저장할 때 select max(dw_seq)로 가져온 dw_seq도 키벨류 저장 ✅ 2024-04-09
-- [ ] 선석배치된 선박을 Drag&Drop으로 일정삭제 (~04.08)
+- [x] 선석배치된 선박을 Drag&Drop으로 일정삭제 (~04.08) ✅ 2024-04-11
 - [ ] 선석배치된 선박에 대한 이안기능 (~04.12)
 - [ ] 선석작업현황 그림 왜 안나오는지 찾아야함.
 - [ ] db에 대해서 들은 거 이해하기
