--- a/다울 2024-04-16.md
+++ b/다울 2024-04-16.md
@@ -14,7 +14,7 @@ Tomorrow: [[다울 2024-04-17]]
 - [ ] 선석작업현황 그림 왜 안나오는지 찾아야함.
 - [ ] drawLine할 때 조건 수정해야함
 - [ ] redLine이 그려질 때 조건 거꾸로는 안 가야하고
-[[temp/김종광이사님 리뷰 수정사항]]
+[[../noGitSync/김종광이사님 리뷰 수정사항]]
 
 슬라이스는 빨간선
 시프트는 다른 색으로 표시해볼까?
