--- a/다울 2024-04-17.md
+++ b/다울 2024-04-17.md
@@ -9,7 +9,7 @@ Yesterday: [[다울 2024-04-16]]
 Tomorrow: [[다울 2024-04-18]]
 
 ## 오늘 작업 목표
-[[temp/김종광이사님 리뷰 수정사항|김종광이사님 리뷰 수정사항]]
+[[../noGitSync/김종광이사님 리뷰 수정사항|김종광이사님 리뷰 수정사항]]
 
 
 ###### 주간 업무 회의
