--- a/다울 2024-04-22.md
+++ b/다울 2024-04-22.md
@@ -4,15 +4,15 @@ created: 2024-04-22 08:02
 aliases: 
 tags:
 ---
-- [ ] 나스 솔루션 link, source 백업하기
+- [x] 나스 솔루션 link, source 백업하기 ✅ 2024-04-22
 지난 주 금: [[다울 2024-04-19]]
 Tomorrow: [[다울 2024-04-23]]
 
 ## 오늘 작업 목표
 [[temp/다울 4월 개인 업무 일정|다울 4월 개인 업무 일정]]
-[[temp/김종광이사님 리뷰 수정사항|김종광이사님 리뷰 수정사항]]
+[[../noGitSync/김종광이사님 리뷰 수정사항|김종광이사님 리뷰 수정사항]]
 [[temp/장재석 이사님 ai 질문 모음|장재석 이사님 ai 질문 모음]]
-[[temp/ai 하역계획 회의 내용|ai 하역계획 회의 내용]]
+[[../noGitSync/ai 하역계획 회의 내용|ai 하역계획 회의 내용]]
 
 내일 출근하면 바퀴벌레 있을듯
 잡아야지 뭐
@@ -229,5 +229,3 @@ for (int rowIndex = 0; rowIndex < ds.Tables[0].Rows.Count; rowIndex++)
 ###### 이유
 적절한 이벤트 처리 로직은 사용자 경험을 향상시키고, 데이터의 일관성 및 애플리케이션 성능을 보장하는 데 중요합니다. 개선된 로직은 이벤트 처리의 정확성을 높이고, 시스템의 안정성을 강화할 수 있습니다.
 
-Q1 : 체크박스의 상태가 변경될 때 발생할 수 있는 예외적인 상황은 어떤 것들이 있을까요?
-Q
