--- a/다울 2024-04-03.md
+++ b/다울 2024-04-03.md
@@ -8,7 +8,7 @@ tags:
 Yesterday: [[다울 2024-04-02]]
 Tomorrow: [[다울 2024-04-04]]
 
-[[temp/다울 4월 개인 업무 일정|다울 4월 개인 업무 일정]]
+[[../noGitSync/다울 4월 개인 업무 일정|다울 4월 개인 업무 일정]]
 
 다울 승진 
 정홍연 부장, (차장 -> 부장)
