--- a/다울 2024-04-12.md
+++ b/다울 2024-04-12.md
@@ -10,7 +10,7 @@ Yesterday: [[다울 2024-04-11]]
 
 ## 오늘 작업 목표
 
-[[temp/다울 4월 개인 업무 일정|다울 4월 개인 업무 일정]]
+[[../noGitSync/다울 4월 개인 업무 일정|다울 4월 개인 업무 일정]]
 
 
 
