--- a/다울 2024-04-19.md
+++ b/다울 2024-04-19.md
@@ -9,7 +9,7 @@ Yesterday: [[다울 2024-04-18]]
 Tomorrow: [[다울 2024-04-20]]
 
 ## 오늘 작업 목표
-[[temp/다울 4월 개인 업무 일정|다울 4월 개인 업무 일정]]
+[[../noGitSync/다울 4월 개인 업무 일정|다울 4월 개인 업무 일정]]
 - [ ] ai 요청 팝업
 - [ ] 선박 긴급 어쩌고...
 - [ ] 사용 금지 기능 버튼
