--- a/다울 2024-04-22.md
+++ b/다울 2024-04-22.md
@@ -9,10 +9,10 @@ tags:
 Tomorrow: [[다울 2024-04-23]]
 
 ## 오늘 작업 목표
-[[temp/다울 4월 개인 업무 일정|다울 4월 개인 업무 일정]]
+[[../noGitSync/다울 4월 개인 업무 일정|다울 4월 개인 업무 일정]]
 [[../noGitSync/김종광이사님 리뷰 수정사항|김종광이사님 리뷰 수정사항]]
 [[temp/장재석 이사님 ai 질문 모음|장재석 이사님 ai 질문 모음]]
-[[../noGitSync/ai 하역계획 회의 내용|ai 하역계획 회의 내용]]
+[[../noGitSync/회의/ai 하역계획 회의 내용 0418|ai 하역계획 회의 내용 0418]]
 
 내일 출근하면 바퀴벌레 있을듯
 잡아야지 뭐
