--- a/다울 2024-04-02.md
+++ b/다울 2024-04-02.md
@@ -61,7 +61,7 @@ SELECT DW_SEQ
 드롭 후에 tag 정보를 바탕으로 cell paint 이벤트를 타고 disp_text를 화면에 보여주는 기능은 작업중
 - [ ] 하역작업계획 수동 편성 기능
 
-[[temp/다울 4월 개인 업무 일정|다울 4월 개인 업무 일정]]
+[[../noGitSync/다울 4월 개인 업무 일정|다울 4월 개인 업무 일정]]
 
 ## 이번 주 연구노트 작성
 
