--- a/다울 2024-04-05.md
+++ b/다울 2024-04-05.md
@@ -9,7 +9,7 @@ Yesterday: [[다울 2024-04-04]]
 다음 주 금: [[다울 2024-04-08]]
 
 ## 오늘 작업 목표
-[[temp/다울 4월 개인 업무 일정|다울 4월 개인 업무 일정]]
+[[../noGitSync/다울 4월 개인 업무 일정|다울 4월 개인 업무 일정]]
 
 - [ ] 선석배치된 선박을 Drag&Drop으로 일정이동 (~04.05)
 - [ ] 선석배치된 선박을 Drag&Drop으로 일정삭제 (~04.08)
