--- a/다울 2024-04-26.md
+++ b/다울 2024-04-26.md
@@ -6,14 +6,11 @@ tags:
 ---
 - [x] 나스 솔루션 link, source 백업하기 ✅ 2024-04-26
 Yesterday: [[다울 2024-04-25]]
-Tomorrow: [[다울 2024-04-27]]
+다음 주 월: [[다울 2024-04-29]]
 
 ## 오늘 작업 목표
-- [ ] 최규동 상무님 화면 개선 요청사항 문서작업
-- [ ] 김종광이사님 db 수정사항으로 인한 코드 수정
-	- [ ] 조회
-	- [ ] 입력
-	- [ ] 수정 기능 수정해야
+- [x] 최규동 상무님 화면 개선 요청사항 문서작업 ✅ 2024-04-29
+
 	      
 [[../noGitSync/0425 하작계 최규동상무님 리뷰|0425 하작계 최규동상무님 리뷰]]
 [[temp/민방위 일정 광양 중마동|민방위 일정 광양 중마동]]
