--- a/다울 2024-04-29.md
+++ b/다울 2024-04-29.md
@@ -17,6 +17,7 @@ Tomorrow: [[다울 2024-04-30]]
 	- [x] 수정 기능 수정해야 ✅ 2024-04-29
 	- [ ] 이안
 
+
 ##### 이안
 이안을 한 선박인지 아닌지 확인하는 방법
 dt start, dt end, 이렇게 쭉 간다고 했을 때
@@ -29,7 +30,9 @@ move가 1이고
 내 dt와 일치하는 조각0의 dt2가 있는지 확인해서 만약 있다면
 조각0의 dt2도 같이 update 해주어야 함
 
-
+언제 확인해?
+마우스다운 했을 때
+마우스다운한 계획의 위치를 알아두고 만약 move가 1이면 체크하는 식으로 하는게 맞을려나
 
 선박상세정보 단위표시 이렇게?
 
