--- a/다울 2024-05-02.md
+++ b/다울 2024-05-02.md
@@ -18,7 +18,7 @@ Tomorrow: [[다울 2024-05-03]]
 ![[Pasted image 20240502082714.png]]
 
 
-[[../noGitSync/회의/다울 회의 2024-05-02|다울 회의 2024-05-02]]
+[[../noGitSync/회의/다울 회의 2024-05-02 김종광, 최규동|다울 회의 2024-05-02 김종광, 최규동]]
 
 ###### FpSpread의 엑셀 EXPORT 로직
 ![[journals/temp/FpSpread의 엑셀 EXPORT 로직]]
