--- a/다울 2024-05-10.md
+++ b/다울 2024-05-10.md
@@ -17,62 +17,25 @@ Yesterday: [[다울 2024-05-09]]
 ![[journals/temp/EditChange 와 CellChanged 비교]]
 
 
+###### dto, hashtable, dictionary 데이터 관리 비교
+![[dawoolNote/journals/dto, hashtable, dictionary 데이터 관리 비교]]
 
-DTO (Data Transfer Object), `Hashtable`, 그리고 `Dictionary`를 사용하여 데이터를 관리하는 방식은 각각 다른 상황과 요구에 따라 선택됩니다. 이들 각각의 사용법과 차이점을 이해하는 것은 데이터 구조 선택에 큰 도움이 됩니다.
-
-### 1. DTO (Data Transfer Object)
-
-DTO는 데이터를 다른 레이어나 서비스 간에 전달하기 위해 사용되는 객체로, 특정한 데이터 모델을 나타내는 속성들로 구성됩니다.
-
-**장점:**
-- **명확한 데이터 모델**: DTO는 명시적인 프로퍼티들을 가지며, 각 프로퍼티의 데이터 타입이 정의되어 있어 데이터 구조를 명확하게 이해할 수 있습니다.
-- **유형 안정성**: C#과 같은 정적 타입 언어에서 DTO를 사용하면 컴파일 타임에 타입 체크가 가능하여 오류를 미리 감지할 수 있습니다.
-- **캡슐화**: 데이터와 관련된 비즈니스 로직을 DTO 내에 캡슐화할 수 있습니다.
-
-**단점:**
-- **유연성 부족**: 데이터 구조가 변경되면 DTO 클래스 자체도 수정해야 합니다.
-- **오버헤드**: 작은 데이터 또는 단순한 데이터 전송에 대해 DTO를 설정하고 관리하는 것은 과도한 구조일 수 있습니다.
-
-### 2. Hashtable
-
-`Hashtable`은 키-값 쌍을 저장하는 데이터 구조로, 키를 사용해 데이터에 빠르게 접근할 수 있습니다. 단, C#에서는 모든 키와 값이 `object` 타입이어야 하며, 박싱과 언박싱이 필요합니다.
-
-**장점:**
-- **동적 스토리지**: 데이터를 동적으로 추가하거나 제거할 수 있습니다.
-- **키를 통한 접근**: 키를 사용하여 데이터 항목에 빠르게 접근할 수 있습니다.
-
-**단점:**
-- **타입 안정성 부족**: 모든 키와 값이 `object` 타입이기 때문에 타입 안정성이 부족합니다.
-- **성능 문제**: 박싱과 언박싱으로 인해 성능 저하가 발생할 수 있습니다.
-
-### 3. Dictionary
-
-`Dictionary<TKey, TValue>`는 `Hashtable`의 제네릭 버전으로, 각 키와 값에 구체적인 타입을 지정할 수 있습니다.
-
-**장점:**
-- **타입 안정성**: `Dictionary`는 제네릭을 사용하여 타입 안정성을 제공합니다.
-- **빠른 접근 속도**: 해시 테이블을 기반으로 하므로 키를 통한 데이터 접근이 빠릅니다.
-- **유연성**: 데이터를 동적으로 추가하거나 삭제할 수 있으며, 컬렉션을 쉽게 조작할 수 있습니다.
-
-**단점:**
-- **메모리 사용**: 내부적으로 해시 테이블을 사용하기 때문에 메모리 사용이 늘어날 수 있습니다.
-- **순서 보장 안됨**: 키의 순서가 데이터의 삽입 순서를 반영하지 않습니다.
-
-### 결론
-
-- **DTO 사용**: 구조화된 데이터 전달, 유형 안정성이 필요한 경우, 데이터와 관련된 메서드를 한 곳에서 관리하고자 할 때 적합합니다.
-- **Hashtable 사용**: 동적인 키-값 저장이 필요하나, 박싱/언박싱으로 인한 성능 저하가
-
- 문제가 되지 않을 때 적합합니다(현대의 .NET 환경에서는 권장되지 않습니다).
-- **Dictionary 사용**: 타입 안정성과 빠른 접근 속도가 필요하며, 키-값 쌍을 동적으로 관리해야 할 때 가장 적합합니다.
-
-
-널 값 검사와 효율적인 데이터 접근은 데이터베이스로부터 데이터를 다룰 때 흔히 마주치는 문제들입니다. 아래에서 이 두 가지 개념을 좀 더 자세히 설명하고, C#에서 이를 어떻게 처리할 수 있는지 살펴보겠습니다.
+널 값 검사와 DBNull
+널 값 검사와 효율적인 데이터 접근은 
+데이터베이스로부터 데이터를 다룰 때 흔히 마주치는 문제들입니다. 
+아래에서 이 두 가지 개념을 좀 더 자세히 설명하고, 
+C#에서 이를 어떻게 처리할 수 있는지 살펴보겠습니다.
 
 ### 1. 널 값 검사
-데이터베이스에서는 종종 값이 비어있는(NULL) 경우가 있습니다. C#에서는 데이터베이스의 NULL 값을 `DBNull.Value`로 표현합니다. `DataRow` 객체에서 데이터를 읽을 때, 이 `DBNull.Value`를 확인하지 않고 값을 타입으로 변환하려고 하면 예외가 발생할 수 있습니다. 따라서 `DBNull.Value`를 검사하는 과정은 데이터 처리에서 중요한 단계입니다.
+데이터베이스에서는 종종 값이 비어있는(NULL) 경우가 있습니다. 
+C#에서는 데이터베이스의 NULL 값을 `DBNull.Value`로 표현합니다. 
+`DataRow` 객체에서 데이터를 읽을 때, 
+이 `DBNull.Value`를 확인하지 않고 값을 타입으로 변환하려고 하면 
+예외가 발생할 수 있습니다. 
+따라서 `DBNull.Value`를 검사하는 과정은 
+데이터 처리에서 중요한 단계입니다.
 
-**예시:**
+##### **예시:**
 ```csharp
 public EmployeeDTO ConvertDataRowToDTO(DataRow row)
 {
@@ -85,48 +48,47 @@ public EmployeeDTO ConvertDataRowToDTO(DataRow row)
     };
 }
 ```
-위 코드에서는 각 필드를 읽기 전에 `DBNull.Value`와 비교를 합니다. 널일 경우 C#의 `null`을 할당하고, 그렇지 않으면 적절한 타입으로 변환하여 할당합니다.
+위 코드에서는 각 필드를 읽기 전에 `DBNull.Value`와 비교를 합니다.
+널일 경우 C#의 `null`을 할당하고, 
+그렇지 않으면 적절한 타입으로 변환하여 할당합니다.
 
 ### 2. 효율적인 데이터 접근
-`DataRow`의 `Field<T>()` 메소드를 사용하면 타입을 명시적으로 지정하여 필드 값을 안전하게 읽을 수 있습니다. 이 메소드는 내부적으로 타입 검사와 `DBNull` 처리를 수행하므로, 데이터 접근 코드를 더 간결하고 안전하게 작성할 수 있습니다.
-
-**예시:**
-```csharp
-public EmployeeDTO ConvertDataRowToDTO(DataRow row)
-{
-    return new EmployeeDTO
-    {
-        EmployeeId = row.Field<int>("EmployeeId"),
-        FirstName = row.Field<string>("FirstName"),
-        LastName = row.Field<string>("LastName"),
-        HireDate = row.Field<DateTime?>("HireDate")
-    };
-}
-```
-위 코드에서 `Field<T>()` 메소드를 사용하여 각 필드 값을 직접 타입에 맞게 안전하게 읽습니다. `HireDate` 필드처럼 nullable 타입이 필요한 경우, `DateTime?`와 같이 nullable 형식을 지정할 수 있습니다. 이 방법은 타입 안전성을 보장하며, `DBNull` 처리도 자동으로 수행합니다.
+###### DataRow의 Field
+![[dawoolNote/journals/DataRow의 Field]]
 
 ### 결론
-이 두 기법은 데이터를 안전하고 효율적으로 처리하는 데 필수적입니다. 널 값 검사는 데이터의 무결성을 보장하고, `Field<T>()` 메소드는 코드의 간결성과 안전성을 향상시킵니다. 데이터를 DTO로 변환할 때 이러한 접근 방식을 사용하면, 데이터 관련 오류를 줄이고, 애플리케이션의 안정성을 높일 수 있습니다.
+이 두 기법은 
+데이터를 안전하고 효율적으로 처리하는 데 필수적입니다. 
+널 값 검사는 데이터의 무결성을 보장하고, 
+`Field<T>()` 메소드는 코드의 간결성과 안전성을 향상시킵니다. 
+데이터를 DTO로 변환할 때 이러한 접근 방식을 사용하면, 
+데이터 관련 오류를 줄이고, 애플리케이션의 안정성을 높일 수 있습니다.
 
 
 
 #### 요약
-###### ISA 계좌란?
-ISA(개인종합자산관리계좌)는 다양한 금융상품에 투자할 수 있는 통합 계좌입니다. 이 계좌를 사용하면 세제 혜택을 받으며 다양한 금융 상품에 소액 투자가 가능합니다. 투자 한도와 기간에 제한이 있으며, 이를 통해 주식, 채권, 펀드 등에 투자할 수 있습니다.
+###### ISA 계좌
+![[dawoolNote/journals/ISA 계좌]]
 
-###### IRP 계좌란?
-IRP(개인형 퇴직연금) 계좌는 퇴직금을 관리하고, 은퇴 후에도 지속적인 수입을 보장받기 위해 설정할 수 있는 연금 계좌입니다. IRP를 통해 주식, 채권, 펀드 등 다양한 금융 상품에 투자할 수 있으며, 투자 성과에 따라 연금 수령액이 달라질 수 있습니다.
+###### IRP 계좌
+![[dawoolNote/journals/IRP 계좌]]
 
 Q1 : ISA 계좌의 세제 혜택은 구체적으로 어떻게 적용되나요?
 Q2 : IRP 계좌로 전환 시 고려해야 할 주요 사항은 무엇인가요?
 
 
 
-`where T : class`는 C#에서 제네릭 타입 제약을 지정하는 구문의 일부입니다. 이 구문은 제네릭 타입 매개변수 `T`가 참조 타입이어야 함을 명시합니다. 제네릭 타입 제약을 사용하면, 타입 매개변수에 대한 특정 조건을 지정하여 코드의 안정성과 가독성을 높일 수 있습니다.
+`where T : class`는 
+C#에서 제네릭 타입 제약을 지정하는 구문의 일부입니다. 
+이 구문은 제네릭 타입 매개변수 `T`가 참조 타입이어야 함을 명시합니다. 
+제네릭 타입 제약을 사용하면, 
+타입 매개변수에 대한 특정 조건을 지정하여 코드의 안정성과 가독성을 높일 수 있습니다.
 
 ### 제네릭 타입 제약의 기본 구문
 
-제네릭 타입 제약은 제네릭 클래스나 메서드를 정의할 때, `where` 키워드를 사용하여 타입 매개변수에 추가 조건을 지정할 수 있게 해줍니다. 
+제네릭 타입 제약은 
+제네릭 클래스나 메서드를 정의할 때, 
+`where` 키워드를 사용하여 타입 매개변수에 추가 조건을 지정할 수 게 해줍니다. 
 
 ```csharp
 public class MyGenericClass<T> where T : class
