--- a/다울 2024-05-16.md
+++ b/다울 2024-05-16.md
@@ -4,7 +4,7 @@ created: 2024-05-16 07:55
 aliases: 
 tags:
 ---
-- [ ] 나스 솔루션 link, source 백업하기
+- [x] 나스 솔루션 link, source 백업하기 ✅ 2024-05-16
 이번주 화: [[다울 2024-05-14]]
 Tomorrow: [[다울 2024-05-17]]
 
@@ -22,7 +22,9 @@ Tomorrow: [[다울 2024-05-17]]
 이벤트 비활성화 및 플래그 설정이 제대로 이루어지지 않아서 
 
 #### 1. 이벤트 핸들러 수정
-이벤트 핸들러가 두 번째 클릭마다 발생하는 문제를 해결하기 위해 `CheckBoxChanged` 이벤트를 사용하고, 이벤트가 중복으로 발생하지 않도록 플래그를 올바르게 설정합니다.
+이벤트 핸들러가 두 번째 클릭마다 발생하는 문제를 해결하기 위해
+`CheckBoxChanged` 이벤트를 사용하고, 
+이벤트가 중복으로 발생하지 않도록 플래그를 올바르게 설정합니다.
 
 ```csharp
 private bool _checkboxChangeProcessing = false; // 체크박스 변경 처리 플래그
@@ -73,17 +75,22 @@ private void Form1_Load(object sender, EventArgs e)
 ```
 
 ### 요약
-1. **이벤트 핸들러 수정**
-   `CellClick` 이벤트를 사용하여 체크박스 셀 값을 변경할 때 라디오 버튼처럼 동작하도록 설정.
+###### **이벤트 핸들러 수정**
+`CellClick` 이벤트를 사용하여 
+체크박스 셀 값을 변경할 때 라디오 버튼처럼 동작하도록 설정.
 
-2. **플래그 사용**
-   이벤트 재발생을 방지하기 위해 플래그를 사용하여 이벤트 처리 중에는 추가 이벤트를 무시.
+###### 플래그 사용
+이벤트 재발생을 방지하기 위해 플래그를 사용하여 이벤트 처리 중에는 추가 이벤트를 무시.
 
-3. **이벤트 핸들러 연결**
-   폼의 로드 이벤트에서 이벤트 핸들러를 연결하여 초기화.
+###### 이벤트 핸들러 연결
+폼의 로드 이벤트에서 이벤트 핸들러를 연결하여 초기화.
 
 ### 결론
-이제 체크박스 셀 타입이 라디오 버튼처럼 동작할 것입니다. 이벤트가 중복으로 발생하는 문제를 해결하기 위해 `CellClick` 이벤트를 사용하고, 이벤트 핸들러에서 플래그를 활용하여 중복 이벤트 발생을 방지합니다.
+이제 체크박스 셀 타입이 라디오 버튼처럼 동작할 것입니다. 
+이벤트가 중복으로 발생하는 문제를 해결하기 위해 
+`CellClick` 이벤트를 사용하고, 
+이벤트 핸들러에서 플래그를 활용하여 중복 이벤트 발생을 방지합니다.
+
 
 
 
@@ -147,14 +154,15 @@ private void Form1_Load(object sender, EventArgs e)
 ```
 
 ### 요약
-1. **`sender` 파라미터 활용**
-   이벤트가 발생한 컨트롤에 접근하여 관련 정보를 얻습니다.
+###### `sender` 파라미터 활용
+이벤트가 발생한 컨트롤에 접근하여 관련 정보를 얻습니다.
 
-2. **`e` 파라미터 활용**
-   이벤트와 관련된 추가 정보를 제공합니다.
+###### e 파라미터 활용
+이벤트와 관련된 추가 정보를 제공합니다.
 
-3. **체크박스 셀 라디오 버튼처럼 구현**
-   `sender`와 `e`를 활용하여 체크박스 셀을 라디오 버튼처럼 동작하도록 구현합니다.
+###### 체크박스 셀 라디오 버튼처럼 구현
+`sender`와 `e`를 활용하여 체크박스 셀을 
+라디오 버튼처럼 동작하도록 구현합니다.
 
 Q1: `sender`와 `e` 파라미터를 활용하여 이벤트 핸들러의 유연성을 높이는 다른 방법은 무엇이 있을까요?  
 Q2: 다양한 이벤트 유형에서 `e` 파라미터를 활용할 수 있는 방법은 무엇인가요?
@@ -254,18 +262,18 @@ internal bool INSERT_TB_UNLOAD_PLAN2_CLICK(UnloadPlanDto ulDto)
 ```
 
 ### 요약
-1. **Reflection을 사용하여 DTO 속성 읽기**
-   Reflection을 사용하여 DTO의 속성 이름과 값을 자동으로 가져옵니다.
+###### Reflection을 사용하여 DTO 속성 읽기
+Reflection을 사용하여 DTO의 속성 이름과 값을 자동으로 가져옵니다.
 
-2. **동적 SQL 문 생성**
-   DTO 속성 이름과 값을 사용하여 동적 SQL INSERT 문을 생성합니다.
+###### 동적 SQL 문 생성
+DTO 속성 이름과 값을 사용하여 동적 SQL INSERT 문을 생성합니다.
 
-3. **예외 처리**
-   예외가 발생하면 메시지 박스에 예외 메시지를 표시합니다.
+###### 예외 처리
+예외가 발생하면 메시지 박스에 예외 메시지를 표시합니다.
 
 ### 장점
-- 코드가 더 유연하고 유지 보수하기 쉬워집니다.
-- 새로운 속성이 추가되더라도 코드 변경 없이 자동으로 처리할 수 있습니다.
+코드가 더 유연하고 유지 보수하기 쉬워집니다.
+새로운 속성이 추가되더라도 코드 변경 없이 자동으로 처리할 수 있습니다.
 
 
 
@@ -334,19 +342,19 @@ internal bool INSERT_TB_UNLOAD_PLAN2_CLICK(UnloadPlanDto ulDto)
 ```
 
 ### 요약
-1. **`null` 값 처리**
-   - 속성 값이 `null`인 경우 SQL 문에서 `NULL`로 처리합니다.
-   - 속성 값이 문자열이나 날짜인 경우 따옴표로 감쌉니다.
-   - 속성 값이 숫자 등 다른 타입인 경우 그대로 삽입합니다.
+###### null 값 처리
+속성 값이 `null`인 경우 SQL 문에서 `NULL`로 처리합니다.
+속성 값이 문자열이나 날짜인 경우 따옴표로 감쌉니다.
+속성 값이 숫자 등 다른 타입인 경우 그대로 삽입합니다.
 
-2. **Reflection을 사용하여 DTO 속성 읽기**
-   - Reflection을 사용하여 DTO의 속성 이름과 값을 자동으로 가져옵니다.
+###### Reflection을 사용하여 DTO 속성 읽기
+Reflection을 사용하여 DTO의 속성 이름과 값을 자동으로 가져옵니다.
 
-3. **동적 SQL 문 생성**
-   - DTO 속성 이름과 값을 사용하여 동적 SQL INSERT 문을 생성합니다.
+###### 동적 SQL 문 생성
+DTO 속성 이름과 값을 사용하여 동적 SQL INSERT 문을 생성합니다.
 
-4. **예외 처리**
-   - 예외가 발생하면 메시지 박스에 예외 메시지를 표시합니다.
+###### 예외 처리
+예외가 발생하면 메시지 박스에 예외 메시지를 표시합니다.
 
 Q1: 다른 SQL 작업(UPDATE, DELETE 등)을 동적으로 생성할 때 Reflection을 사용하는 방법은 무엇인가요?  
 Q2: Reflection을 사용할 때 성능을 최적화할 수 있는 방법은 무엇인가요?
