--- a/다울 2024-05-23.md
+++ b/다울 2024-05-23.md
@@ -9,8 +9,9 @@ Yesterday: [[다울 2024-05-22]]
 Tomorrow: [[다울 2024-05-24]]
 
 ## 오늘 작업 목표
-- [ ] AI작업자비교결과 선택(체크박스)에 따른 확정편성지시 저장
-- [ ] AI 작업자 비교 시트에 수동편성 계획의 조체선료 표시 
+
+- [x] AI 작업자 비교 시트에 수동편성 계획의 조체선료 표시 ✅ 2024-05-23
+- [x] 잠금 조회 기능만 구현 ✅ 2024-05-23
 
 
 
