--- a/다울 2024-05-24.md
+++ b/다울 2024-05-24.md
@@ -6,11 +6,11 @@ tags:
 ---
 - [ ] 나스 솔루션 link, source 백업하기
 Yesterday: [[다울 2024-05-23]]
-Tomorrow: [[다울 2024-05-25]]
+다음 주 월: [[다울 2024-05-27]]
 
 ## 오늘 작업 목표
 - [ ] AI작업자비교결과 선택(체크박스)에 따른 확정편성지시 저장
-- [ ] 잠금 조회 말고 입력, 삭제 구현하기
+- [x] 잠금 조회 말고 입력, 삭제 구현하기 ✅ 2024-05-24
 
 
 
