--- a/다울 2024-05-24.md
+++ b/다울 2024-05-24.md
@@ -20,10 +20,13 @@ Tomorrow: [[다울 2024-05-25]]
 ### C#에서 상태에 따라 셀클릭과 마우스다운 이벤트를 다르게 처리하기
 
 ###### 상태 관리 개요
-이 문제를 해결하기 위해서는 버튼 클릭 상태를 추적할 변수를 사용하여, 셀클릭 이벤트와 마우스다운 이벤트가 해당 변수에 따라 다르게 동작하도록 설정해야 합니다.
+이 문제를 해결하기 위해서는 
+버튼 클릭 상태를 추적할 변수를 사용하여, 
+셀클릭 이벤트와 마우스다운 이벤트가 해당 변수에 따라 다르게 동작하도록 설정해야 합니다.
 
 ###### 상태 변수 선언
-클래스 레벨에서 상태를 추적할 변수를 선언합니다. 예를 들어, `bool` 타입의 변수를 사용할 수 있습니다.
+클래스 레벨에서 상태를 추적할 변수를 선언합니다. 
+예를 들어, `bool` 타입의 변수를 사용할 수 있습니다.
 ```csharp
 private bool isButtonClicked = false;
 ```
@@ -58,7 +61,8 @@ private void fpSpread1_CellClick(object sender, FarPoint.Win.Spread.CellClickEve
 ```
 
 ###### 마우스다운 이벤트 핸들러
-비슷한 방식으로 마우스다운 이벤트 핸들러를 작성하여 상태 변수에 따라 다르게 동작하도록 합니다.
+비슷한 방식으로 마우스다운 이벤트 핸들러를 작성하여 
+상태 변수에 따라 다르게 동작하도록 합니다.
 ```csharp
 private void fpSpread1_MouseDown(object sender, MouseEventArgs e)
 {
@@ -109,7 +113,9 @@ Q2 :
 ### 상태 관리 방법 확장
 
 ###### 상태 변수로 사용할 수 있는 타입들
-`bool` 외에도 여러 버튼 상태를 관리하려면 열거형(enum)을 사용할 수 있습니다. 예를 들어, 다양한 상태를 정의하는 `enum` 타입을 선언합니다.
+`bool` 외에도 여러 버튼 상태를 관리하려면 
+열거형(enum)을 사용할 수 있습니다. 
+예를 들어, 다양한 상태를 정의하는 `enum` 타입을 선언합니다.
 ```csharp
 enum ButtonState
 {
@@ -187,7 +193,8 @@ private void fpSpread1_MouseDown(object sender, MouseEventArgs e)
 ```
 
 ###### 다양한 상태를 관리하는 방법
-여러 상태를 관리해야 할 경우, 상태 패턴(State Pattern)을 사용하거나 상태를 관리하는 클래스를 따로 만들어 보다 체계적으로 관리할 수 있습니다.
+여러 상태를 관리해야 할 경우, 
+상태 패턴(State Pattern)을 사용하거나 상태를 관리하는 클래스를 따로 만들어 보다 체계적으로 관리할 수 있습니다.
 
 ###### 상태 관리 클래스 예제
 ```csharp
@@ -223,10 +230,6 @@ private void Button_Click(object sender, EventArgs e)
 }
 ```
 
-Q1 : 
-상태를 더 복잡하게 관리해야 할 경우, 상태 패턴(State Pattern)을 어떻게 구현할 수 있을까요?
-Q2 : 
-상태를 관리하는 클래스를 사용할 때, 장점과 단점은 무엇인가요?
 
 ###### 상태 변수로 열거형 사용
 ###### 여러 버튼 상태 관리
@@ -238,182 +241,8 @@ Q2 :
 
 
 
-### 상태 관리에 적합한 디자인 패턴
-
-###### 상태 패턴 (State Pattern)
-상태 패턴은 객체의 상태를 캡슐화하여 상태에 따라 객체의 행동을 변경할 수 있도록 하는 디자인 패턴입니다. 이는 상태 전환을 명확하게 하고, 상태 관련 코드의 응집도를 높이는 데 유용합니다.
-
-###### 상태 패턴의 구성 요소
-- **Context**: 상태 전환을 관리하고 현재 상태에 대한 참조를 유지하는 클래스.
-- **State**: 상태 인터페이스 또는 추상 클래스. 상태에 따라 달라지는 행동을 정의.
-- **ConcreteState**: 구체적인 상태 클래스. 각 상태에 대한 행동을 구현.
-
-###### 상태 패턴 예제
-예제에서는 하역계획(HaulPlan), 이안(Docking), 잠금(Lock) 버튼의 상태를 관리합니다.
-
-###### State 인터페이스
-```csharp
-public interface IButtonState
-{
-    void HandleCellClick(FarPoint.Win.Spread.Cell cell);
-    void HandleMouseDown(FarPoint.Win.Spread.Cell cell);
-}
-```
-
-###### 구체적인 상태 클래스들
-```csharp
-public class HaulPlanState : IButtonState
-{
-    public void HandleCellClick(FarPoint.Win.Spread.Cell cell)
-    {
-        cell.BackColor = Color.LightBlue;
-        cell.Tag = "Haul Plan";
-    }
-
-    public void HandleMouseDown(FarPoint.Win.Spread.Cell cell)
-    {
-        cell.BackColor = Color.LightBlue;
-        cell.Tag = "Haul Plan Down";
-    }
-}
-
-public class DockingState : IButtonState
-{
-    public void HandleCellClick(FarPoint.Win.Spread.Cell cell)
-    {
-        cell.BackColor = Color.LightGreen;
-        cell.Tag = "Docking";
-    }
-
-    public void HandleMouseDown(FarPoint.Win.Spread.Cell cell)
-    {
-        cell.BackColor = Color.LightGreen;
-        cell.Tag = "Docking Down";
-    }
-}
-
-public class LockState : IButtonState
-{
-    public void HandleCellClick(FarPoint.Win.Spread.Cell cell)
-    {
-        cell.BackColor = Color.LightCoral;
-        cell.Tag = "Locked";
-    }
-
-    public void HandleMouseDown(FarPoint.Win.Spread.Cell cell)
-    {
-        cell.BackColor = Color.LightCoral;
-        cell.Tag = "Locked Down";
-    }
-}
-```
-
-###### Context 클래스
-```csharp
-public class ButtonContext
-{
-    private IButtonState _currentState;
-
-    public ButtonContext()
-    {
-        _currentState = new DefaultState();
-    }
-
-    public void SetState(IButtonState newState)
-    {
-        _currentState = newState;
-    }
-
-    public void HandleCellClick(FarPoint.Win.Spread.Cell cell)
-    {
-        _currentState.HandleCellClick(cell);
-    }
-
-    public void HandleMouseDown(FarPoint.Win.Spread.Cell cell)
-    {
-        _currentState.HandleMouseDown(cell);
-    }
-}
-
-public class DefaultState : IButtonState
-{
-    public void HandleCellClick(FarPoint.Win.Spread.Cell cell)
-    {
-        cell.BackColor = Color.White;
-        cell.Tag = null;
-    }
-
-    public void HandleMouseDown(FarPoint.Win.Spread.Cell cell)
-    {
-        // 기본 동작
-    }
-}
-```
-
-###### 폼 클래스에서 상태 패턴 사용
-```csharp
-private ButtonContext buttonContext = new ButtonContext();
-
-private void HaulPlanButton_Click(object sender, EventArgs e)
-{
-    buttonContext.SetState(new HaulPlanState());
-    UpdateButtonStates(ButtonState.HaulPlanOn);
-}
-
-private void DockingButton_Click(object sender, EventArgs e)
-{
-    buttonContext.SetState(new DockingState());
-    UpdateButtonStates(ButtonState.DockingOn);
-}
-
-private void LockButton_Click(object sender, EventArgs e)
-{
-    buttonContext.SetState(new LockState());
-    UpdateButtonStates(ButtonState.LockOn);
-}
-
-private void ResetButton_Click(object sender, EventArgs e)
-{
-    buttonContext.SetState(new DefaultState());
-    UpdateButtonStates(ButtonState.None);
-}
-
-private void UpdateButtonStates(ButtonState activeButton)
-{
-    HaulPlanButton.BackColor = activeButton == ButtonState.HaulPlanOn ? Color.Blue : Color.Gray;
-    DockingButton.BackColor = activeButton == ButtonState.DockingOn ? Color.Green : Color.Gray;
-    LockButton.BackColor = activeButton == ButtonState.LockOn ? Color.Red : Color.Gray;
-}
-
-private void fpSpread1_CellClick(object sender, FarPoint.Win.Spread.CellClickEventArgs e)
-{
-    buttonContext.HandleCellClick(e.Cell);
-}
-
-private void fpSpread1_MouseDown(object sender, MouseEventArgs e)
-{
-    var hitInfo = fpSpread1.HitTest(e.X, e.Y);
-    if (hitInfo.Type == FarPoint.Win.Spread.HitTestType.Cell)
-    {
-        var cell = fpSpread1.Sheets[hitInfo.SheetIndex].Cells[hitInfo.Row, hitInfo.Column];
-        buttonContext.HandleMouseDown(cell);
-    }
-}
-```
-
-Q1 :
-상태 패턴 외에 상태 관리를 효율적으로 할 수 있는 다른 디자인 패턴은 무엇인가요?
-
-Q2 :
-상태 패턴을 사용함으로써 발생할 수 있는 단점은 무엇이며, 이를 어떻게 보완할 수 있을까요?
-
-###### 상태 패턴(State Pattern) 소개
-###### 상태 패턴 구성 요소 설명
-###### State 인터페이스 작성
-###### 구체적인 상태 클래스 작성
-###### Context 클래스 작성
-###### 폼 클래스에서 상태 패턴 사용 예제
-###### 상태 패턴의 장점과 단점 분석
+###### 상태 관리에 적합한 디자인 패턴
+![[dawoolNote/journals/상태 관리에 적합한 디자인 패턴]]
 
 
 ### 복잡한 상태 관리를 위한 디자인 패턴 선택
@@ -600,8 +429,8 @@ public static class StateFactory
 }
 ```
 
-###### 상태 관리 클래스
-상태 전환과 상태별 동작을 관리하는 클래스를 구현합니다.
+###### 상태 관리자(Manger) 클래스
+상태 전환과 상태별 동작을 관리하는 매니저 클래스를 구현합니다.
 ```csharp
 public class StateManager
 {
@@ -642,7 +471,8 @@ public class StateManager
 ```
 
 ###### 폼 클래스에서 상태 관리자 사용
-폼 클래스에서 상태 관리자를 사용하여 상태 전환 및 동작을 처리합니다.
+폼 클래스에서 상태 관리자를 사용하여 
+상태 전환 및 동작을 처리합니다.
 ```csharp
 private StateManager stateManager = new StateManager();
 
@@ -681,67 +511,8 @@ Q2 :
 
 
 
-### C#의 스위치 표현식에서 언더바의 의미
-c# 버전 8.0부터 사용가능한 표현
-그 아래는 일반적인 스위치문에 default 쓰면 된다.
-
-###### 언더바의 역할
-언더바(`_`)는 C#의 스위치 표현식에서 **디폴트 매칭 패턴**으로 사용됩니다.
-이는 이전의 모든 경우에 매칭되지 않는 
-나머지 모든 값들을 처리하기 위해 사용됩니다. 
-다른 언어에서의 `default` 케이스와 유사합니다.
-
-###### 스위치 표현식 예제
-`_`를 사용한 스위치 표현식의 예제를 다시 설명하겠습니다.
-```csharp
-public static IButtonState GetButtonState(ButtonState state)
-{
-    return state switch
-    {
-        ButtonState.UnloadPlanOn => new UnloadPlanOnState(),
-        ButtonState.UnloadPlanOff => new UnloadPlanOffState(),
-        ButtonState.BerthShiftOn => new BerthShiftOnState(),
-        ButtonState.BerthShiftOff => new BerthShiftOffState(),
-        ButtonState.LockOn => new LockOnState(),
-        ButtonState.LockOff => new LockOffState(),
-        _ => throw new ArgumentException("Invalid state"), // 나머지 모든 경우를 처리
-    };
-}
-```
-
-###### 예제 설명
-- **`ButtonState.UnloadPlanOn => new UnloadPlanOnState()`**: `state`가 `ButtonState.UnloadPlanOn`인 경우, `UnloadPlanOnState` 객체를 반환합니다.
-- **`_ => throw new ArgumentException("Invalid state")`**: `state`가 이전에 정의된 어떤 경우에도 해당하지 않으면, 예외를 던집니다.
-
-###### 스위치 표현식의 장점
-- **간결성**: 기존의 `switch` 구문보다 코드가 더 간결하고 읽기 쉽습니다.
-- **패턴 매칭**: 다양한 패턴 매칭을 지원하여 복잡한 조건도 간단하게 표현할 수 있습니다.
-- **컴파일러 경고**: 모든 경우를 처리하지 않으면 컴파일러가 경고를 발생시켜 놓치는 경우를 방지합니다.
-
-###### `_`의 다른 사용 예시
-언더바(`_`)는 다른 상황에서도 다양한 용도로 사용됩니다:
-- **디스크카드**: 값을 무시할 때 사용합니다.
-  ```csharp
-  var (_, _, lastName) = GetNameParts(); // firstName과 middleName을 무시
-  ```
-- **명명 규칙**: 특별한 의미 없이 변수명을 강조하거나 구분할 때 사용합니다.
-  ```csharp
-  int _unusedVariable = 42;
-  ```
-
-Q1 :
-C#의 스위치 표현식에서 언더바(_) 외에 다른 패턴 매칭 방법은 무엇이 있나요?
-
-Q2 :
-언더바(_)를 디스크카드로 사용할 때의 주의사항은 무엇인가요?
-
-###### 언더바(`_`)의 역할
-###### 스위치 표현식 예제
-###### 예제 설명
-###### 스위치 표현식의 장점
-###### `_`의 다른 사용 예시
-###### C#의 패턴 매칭 기능 소개
-###### 디스크카드 사용 시 주의사항
+###### C의 스위치 표현식에서 언더바의 의미
+![[dawoolNote/journals/C의 스위치 표현식에서 언더바의 의미]]
 
 
 
@@ -828,201 +599,20 @@ Q2 :
 ###### 추가 예제와 기능 소개
 
 
-### 확장 메서드 (Extension Methods)
-
-###### 확장 메서드 개요
-확장 메서드는 기존 형식에 새로운 메서드를 추가하는 방법을 제공하는 C# 기능입니다. 원래 소스를 수정하지 않고도 기존 클래스, 구조체 또는 인터페이스에 메서드를 추가할 수 있습니다. 이를 통해 코드의 가독성을 높이고, 재사용성을 증대시킬 수 있습니다.
-
-###### 확장 메서드 정의
-확장 메서드는 정적 클래스 내에 정적 메서드로 정의됩니다. 첫 번째 매개변수는 `this` 키워드를 사용하여 확장할 형식을 지정합니다.
-
-###### 확장 메서드 작성 예제
-```csharp
-using System;
-using System.Collections;
-using System.Collections.Generic;
-
-public static class HashtableExtensions
-{
-    public static Dictionary<string, object> ConvertHt2Enumerable(this Hashtable hashtable)
-    {
-        Dictionary<string, object> dictionary = new Dictionary<string, object>();
-
-        foreach (DictionaryEntry entry in hashtable)
-        {
-            if (entry.Key is string key)
-            {
-                dictionary.Add(key, entry.Value);
-            }
-        }
-
-        return dictionary;
-    }
-}
-```
-
-###### 예제 설명
-1. **정적 클래스**: 확장 메서드는 정적 클래스(`static class`) 내에 정의됩니다.
-2. **정적 메서드**: 확장 메서드는 정적 메서드(`static method`)로 정의됩니다.
-3. **this 키워드**: 확장 메서드의 첫 번째 매개변수는 `this` 키워드를 사용하여 확장할 형식을 지정합니다.
-
-###### 확장 메서드 사용
-확장 메서드를 사용하려면 해당 네임스페이스를 포함해야 합니다.
-
-###### 확장 메서드 사용 예제
-```csharp
-using System;
-using System.Collections;
-using System.Collections.Generic;
-using System.Linq;
-
-class Program
-{
-    static void Main()
-    {
-        // Hashtable 생성
-        Hashtable hashtable = new Hashtable
-        {
-            { "One", 1 },
-            { "Two", 2 },
-            { "Three", 3 },
-            { "Four", 4 }
-        };
-
-        // 확장 메서드를 사용하여 Hashtable을 Dictionary로 변환
-        Dictionary<string, object> dictionary = hashtable.ConvertHt2Enumerable();
-
-        // LINQ 쿼리 사용
-        var query = dictionary.Where(kv => (int)kv.Value > 2)
-                              .Select(kv => kv.Key);
-
-        // 결과 출력
-        foreach (var key in query)
-        {
-            Console.WriteLine(key);
-        }
-    }
-}
-```
-
-###### 예제 설명
-1. **Hashtable 생성**: 네 개의 항목이 있는 `Hashtable`을 생성합니다.
-2. **확장 메서드 사용**: `ConvertHt2Enumerable` 확장 메서드를 사용하여 `Hashtable`을 `Dictionary<string, object>`로 변환합니다.
-3. **LINQ 쿼리 사용**: 변환된 `Dictionary`에서 값이 2보다 큰 항목의 키를 선택하는 LINQ 쿼리를 작성합니다.
-4. **결과 출력**: 쿼리 결과를 출력합니다.
-
-Q1 :
-다른 컬렉션 형식에 확장 메서드를 추가할 때 고려해야 할 점은 무엇인가요?
-
-Q2 :
-확장 메서드를 사용하여 기존 형식의 기능을 확장할 때 주의해야 할 사항은 무엇인가요?
-
-###### 확장 메서드 개요
-###### 확장 메서드 정의
-###### 확장 메서드 작성 예제
-###### 예제 설명
-###### 확장 메서드 사용 예제
-###### 다른 컬렉션 형식에 확장 메서드를 추가할 때 고려할 점
-###### 확장 메서드를 사용할 때 주의할 사항
+###### 확장 메서드(Extension Methods)
+![[dawoolNote/journals/확장 메서드(Extension Methods)]]
 
 
-yield in CSharp
-###### `yield` 키워드 개요
-`yield` 키워드는 
-C#에서 반복자(iterator) 메서드를 쉽게 구현할 수 있게 하는 키워드입니다. 
-반복자 메서드는 컬렉션의 요소를 하나씩 반환하는 방법을 제공하며, 
-이 과정에서 상태를 유지하여 다음 요소를 반환할 준비를 합니다.
-
-###### `yield return`의 의미
-호출자에게 값을 하나씩 반환합니다. 
-이 키워드를 사용하면 메서드가 일시 중지되고, 
-다음에 호출될 때 중지된 위치에서 다시 시작됩니다.
-
-###### `yield break`의 의미
-반복을 종료합니다. 이는 반복자를 종료하고, 
-더 이상 요소를 반환하지 않게 합니다.
-
-###### 확장 메서드 예제
-`Hashtable`을 `IEnumerable<KeyValuePair<object, object>>`로 변환하는 확장 메서드를 예제로 설명하겠습니다.
-
-###### 확장 메서드 구현
-```csharp
-using System.Collections;
-using System.Collections.Generic;
-
-public static class HashtableExtensions
-{
-    public static IEnumerable<KeyValuePair<object, object>> AsEnumerable(this Hashtable table)
-    {
-        foreach (DictionaryEntry entry in table)
-        {
-            yield return new KeyValuePair<object, object>(entry.Key, entry.Value);
-        }
-    }
-}
-```
-
-###### 예제 설명
-- **`IEnumerable<KeyValuePair<object, object>>`**: 확장 메서드의 반환 타입으로, LINQ 쿼리를 사용할 수 있는 컬렉션 타입입니다.
-- **`foreach (DictionaryEntry entry in table)`**: `Hashtable`의 모든 항목을 반복합니다.
-- **`yield return new KeyValuePair<object, object>(entry.Key, entry.Value);`**: 각 항목을 `KeyValuePair<object, object>`로 변환하여 호출자에게 반환합니다.
-
-###### 예제 코드
-```csharp
-using System;
-using System.Collections;
-using System.Collections.Generic;
-using System.Linq;
-
-class Program
-{
-    static void Main()
-    {
-        // Hashtable 생성
-        Hashtable hashtable = new Hashtable
-        {
-            { "One", 1 },
-            { "Two", 2 },
-            { "Three", 3 },
-            { "Four", 4 }
-        };
-
-        // Hashtable을 AsEnumerable로 변환하여 LINQ 사용
-        var query = hashtable.AsEnumerable()
-                             .Where(kv => (int)kv.Value > 2)
-                             .Select(kv => kv.Key);
-
-        // 결과 출력
-        foreach (var key in query)
-        {
-            Console.WriteLine(key);
-        }
-    }
-}
-```
-
-###### 예제 설명
-1. **`Hashtable` 생성**: 네 개의 항목이 있는 `Hashtable`을 생성합니다.
-2. **`AsEnumerable` 확장 메서드 사용**: `Hashtable`을 `IEnumerable<KeyValuePair<object, object>>`로 변환합니다.
-3. **LINQ 쿼리 사용**: 변환된 컬렉션에서 값이 2보다 큰 항목의 키를 선택하는 LINQ 쿼리를 작성합니다.
-4. **결과 출력**: 쿼리 결과를 출력합니다.
-
-Q1 :
-`yield` 키워드를 사용하는 반복자 메서드의 장점은 무엇인가요?
-
-Q2 :
-`yield return`과 `yield break`를 함께 사용하여 복잡한 반복자를 구현하는 방법은 무엇인가요?
-
-###### `yield` 키워드 개요
-###### `yield return`의 의미
-###### `yield break`의 의미
-###### 확장 메서드 구현
-###### 예제 설명
-###### 반복자 메서드의 장점
-###### 복잡한 반복자 구현 방법
+###### yield in CSharp
+![[dawoolNote/journals/yield in CSharp]]
 
 
-셀클릭 이벤트와 마우스다운 이벤트를 구분해서 사용하고 싶다면 상태 관리를 통해 각 이벤트에서 다른 로직을 실행하도록 할 수 있습니다. 상태 관리 클래스를 확장하여 셀클릭과 마우스다운 이벤트를 구분하도록 하고, 이벤트 핸들러에서 현재 상태를 확인하여 적절한 로직을 실행하도록 할 수 있습니다.
+셀클릭 이벤트와 마우스다운 이벤트를 구분해서 사용하고 싶다면 
+상태 관리를 통해 각 이벤트에서 다른 로직을 실행하도록 할 수 있습니다. 
+상태 관리 클래스를 확장하여 
+셀클릭과 마우스다운 이벤트를 구분하도록 하고, 
+이벤트 핸들러에서 현재 상태를 확인하여 
+적절한 로직을 실행하도록 할 수 있습니다.
 
 아래에 셀클릭 이벤트와 마우스다운 이벤트를 구분하여 처리하는 예제를 제공합니다.
 
