--- a/다울 2024-05-13.md
+++ b/다울 2024-05-13.md
@@ -23,4 +23,4 @@ DT_WORK  , SHIFT  , MW_CD  , MW_NM  , SH_CD  , SH_NM  , SH_YEAR  , SH_CHASU  , B
 
 [[../noGitSync/회의/다울 회의 2024-05-02 김종광, 최규동|다울 회의 2024-05-02 김종광, 최규동]]
 
-[[회의]]
+[[temp/다울 회의 2024-05-28 주간회의]]
