--- a/다울 2024-05-27.md
+++ b/다울 2024-05-27.md
@@ -29,10 +29,14 @@ dp2에 딸린 up2가 uo2로 insert되어야함.
 
 ## 배운 것
 
-네, fpSpread 시트에 데이터를 보여주기 위해 DTO(Data Transfer Object)를 사용하는 것은 좋은 방법이다. DTO를 사용하면 데이터를 구조화하여 쉽게 다루고, 시트에 데이터를 바인딩할 때의 유연성을 높일 수 있다. 아래에 DTO를 정의하고 데이터를 fpSpread 시트에 표시하는 예제를 설명할게.
+fpSpread 시트에 데이터를 보여주기 위해 DTO(Data Transfer Object)를 사용하는 것은 좋은 방법이다. 
+DTO를 사용하면 데이터를 구조화하여 쉽게 다루고, 
+시트에 데이터를 바인딩할 때의 유연성을 높일 수 있다. 
+아래에 DTO를 정의하고 데이터를 fpSpread 시트에 표시하는 예제를 설명할게.
 
 ### 1. DTO 정의
-먼저, 데이터 구조를 정의하는 DTO를 만든다. 시트의 컬럼명에 맞춰 DTO 클래스를 정의하자.
+먼저, 데이터 구조를 정의하는 DTO를 만든다. 
+시트의 컬럼명에 맞춰 DTO 클래스를 정의하자.
 
 ```csharp
 public class ShipAssignmentDTO
@@ -199,8 +203,6 @@ h6 데이터 추가
 
 Q1 : 데이터 매칭과 바인딩을 더욱 효율적으로 처리하려면 어떻게 해야 할까? 
 Q2 : fpSpread 시트에 더 많은 기능을 추가하려면 어떤 방법을 사용할 수 있을까?
-
-
 
 
 ## 정리가 필요한 메모는 아래에
