--- a/다울 2024-05-14.md
+++ b/다울 2024-05-14.md
@@ -6,7 +6,7 @@ tags:
 ---
 - [ ] 나스 솔루션 link, source 백업하기
 Yesterday: [[다울 2024-05-13]]
-Tomorrow: [[다울 2024-05-15]]
+목요일 : [[다울 2024-05-16]]
 
 ## 오늘 작업 목표
 
