--- a/다울 2024-03-27.md
+++ b/다울 2024-03-27.md
@@ -7,7 +7,7 @@ tags:
 - [x] 나스 솔루션 link, source 백업하기 ✅ 2024-03-27
 [[다울 2024-03-26]]
 ### 오늘 작업
-- [ ] ai 작업자 비교 표시
+- [x] ai 작업자 비교 표시 ✅ 2024-05-29
 dock plan2 테이블에서 다 갖고와서 테이블에 보여주면 된다.
 그리고 확정 컬럼에 멀 넣을지 생각해봐야함.
 버튼?
@@ -18,7 +18,6 @@ dock plan2 테이블에서 다 갖고와서 테이블에 보여주면 된다.
 
 - [x] ai 스프레드에 선박명 보낼 때 중복 메시지 안뜨고 추가 안되게만 수정 ✅ 2024-03-27
 
-- [ ] 하역기 정보 LOAD할 때 
 
 
 [[temp/vs 단축키|vs 단축키]]
