--- a/다울 2024-03-29.md
+++ b/다울 2024-03-29.md
@@ -10,8 +10,8 @@ Yesterday: [[다울 2024-03-28]]
 [[다울 2024-03-22]]
 ## 오늘 작업 목표
 ### 드래그앤드롭
-- [ ] 드래그 오버에서 셀 배경색 바꾸면서 지나가기
-- [ ] 지나갔으면 다시 원래 색깔로 돌아와야함.
+- [x] 드래그 오버에서 셀 배경색 바꾸면서 지나가기 ✅ 2024-05-29
+- [x] 지나갔으면 다시 원래 색깔로 돌아와야함. ✅ 2024-05-29
 선석의 rIdx는 선석코드를 키로 갖고 rIdx를 value로 갖고 있음.
 4
 8
@@ -22,8 +22,6 @@ Yesterday: [[다울 2024-03-28]]
 
 
 ### 이안 선박 빨간색
-- [ ] 이안하면 move next컬럼이 생기고 Max(dw_seq)+1 추가
-- [ ] 새로운 선박 데이터 insert dw_seq가 move_next랑 일치해야함. 그리고 다른 건 다 가져오고 근무시작일, 시작근무조, 근무종료일, 종료근무조, 선석코드, 선석명 바뀜. MAKE_TYPE도 바뀌겠구나
 
 경로 알고리즘
 p1 x y축 좌표값이 있고 p2 x축 y축 좌표값이 있어.
