--- a/다울 2024-04-02.md
+++ b/다울 2024-04-02.md
@@ -53,13 +53,13 @@ SELECT DW_SEQ
 가져온 데이터를 
 
 [[선박 이안 DrawLine]] 이건 나중에 할 거임.
-- [ ] 선택선박정보에서 Drag&Drop으로 선석배치 (~04.03)
-[[temp/GiveFeedback 이벤트|GiveFeedback 이벤트]]
-[[temp/Drawing(그리기) 클래스|Drawing(그리기) 클래스]]
-드래그오버,
-드래그 드롭 까지는 성공
-드롭 후에 tag 정보를 바탕으로 cell paint 이벤트를 타고 disp_text를 화면에 보여주는 기능은 작업중
-- [ ] 하역작업계획 수동 편성 기능
+- [x] 선택선박정보에서 Drag&Drop으로 선석배치 (~04.03)
+	[[temp/GiveFeedback 이벤트|GiveFeedback 이벤트]]
+	[[temp/Drawing(그리기) 클래스|Drawing(그리기) 클래스]]
+	드래그오버,
+	드래그 드롭 까지는 성공
+	드롭 후에 tag 정보를 바탕으로 cell paint 이벤트를 타고 disp_text를 화면에 보여주는 기능은 작업중 ✅ 2024-05-29
+- [x] 하역작업계획 수동 편성 기능 ✅ 2024-05-29
 
 [[../noGitSync/다울 4월 개인 업무 일정|다울 4월 개인 업무 일정]]
 
