--- a/다울 2024-04-04.md
+++ b/다울 2024-04-04.md
@@ -11,10 +11,9 @@ Tomorrow: [[다울 2024-04-05]]
 ## 이번주 작업 목표
 - [x] 드래그할 때 마우스 커서 변경으로 인한 오류 해결 ✅ 2024-04-04
 - [x] 드래그드롭으로 스케줄 마지막에 일정 넣을 때 2칸으로 계획이 잡히도록 수정 ✅ 2024-04-04
-- [ ] 
-- [ ] dragdrop으로 스케줄에 선석이동
-- [ ] 드래그로 일정 변경
-- [ ] 드래그로 일정 삭제
+- [x] dragdrop으로 스케줄에 선석이동 ✅ 2024-05-29
+- [x] 드래그로 일정 변경 ✅ 2024-05-29
+- [x] 드래그로 일정 삭제 ✅ 2024-05-29
 [[temp/GiveFeedback 이벤트|GiveFeedback 이벤트]]
 
 디스플레이 유니티 회의
