--- a/다울 2024-04-08.md
+++ b/다울 2024-04-08.md
@@ -10,9 +10,9 @@ Tomorrow: [[다울 2024-04-09]]
 
 ## 오늘 작업 목표
 [[../noGitSync/다울 4월 개인 업무 일정|다울 4월 개인 업무 일정]]
-- [ ] 선석배치된 선박을 Drag&Drop으로 일정이동 (~04.05)
-- [ ] 선석배치된 선박을 Drag&Drop으로 일정삭제 (~04.08)
-- [ ] 선석배치된 선박에 대한 이안기능 (~04.12)
+- [x] 선석배치된 선박을 Drag&Drop으로 일정이동 (~04.05) ✅ 2024-05-29
+- [x] 선석배치된 선박을 Drag&Drop으로 일정삭제 (~04.08) ✅ 2024-05-29
+- [x] 선석배치된 선박에 대한 이안기능 (~04.12) ✅ 2024-05-29
 ### 
 드래그드롭으로 일정 변경
 
