--- a/다울 2024-04-11.md
+++ b/다울 2024-04-11.md
@@ -15,9 +15,9 @@ Tomorrow: [[다울 2024-04-12]]
 - [x] 선석배치된 선박을 Drag&Drop으로 일정삭제 (~04.08) ✅ 2024-04-11
 	- 일정을 삭제할 때 id값을 사용하는데 id를 수정해야하니 maxDwseq 가져와서 업데이트하고 setTag하면 될듯
 
-- [ ] 선석배치된 선박에 대한 이안기능 (~04.12)
-- [ ] 선석작업현황 그림 왜 안나오는지 찾아야함.
-- [ ] db에 대해서 들은 거 이해하기
+- [x] 선석배치된 선박에 대한 이안기능 (~04.12) ✅ 2024-05-29
+- [x] 선석작업현황 그림 왜 안나오는지 찾아야함. ✅ 2024-05-29
+- [x] db에 대해서 들은 거 이해하기 ✅ 2024-05-29
 
 ```
 private readonly List<string> _dragTypeList = new List<string>()
