--- a/다울 2024-04-19.md
+++ b/다울 2024-04-19.md
@@ -4,15 +4,14 @@ created: 2024-04-19 08:05
 aliases: 
 tags:
 ---
-- [ ] 나스 솔루션 link, source 백업하기
 Yesterday: [[다울 2024-04-18]]
 Tomorrow: [[다울 2024-04-20]]
 
 ## 오늘 작업 목표
 [[../noGitSync/다울 4월 개인 업무 일정|다울 4월 개인 업무 일정]]
-- [ ] ai 요청 팝업
-- [ ] 선박 긴급 어쩌고...
-- [ ] 사용 금지 기능 버튼
+- [x] ai 요청 팝업 ✅ 2024-05-29
+- [x] 선박 긴급 어쩌고... ✅ 2024-05-29
+- [x] 사용 금지 기능 버튼 ✅ 2024-05-29
 
 
 [[민방위 일정 광양 중마동]]
