--- a/다울 2024-04-30.md
+++ b/다울 2024-04-30.md
@@ -11,7 +11,7 @@ Tomorrow: [[다울 2024-05-01]]
 ## 오늘 작업 목표
 - [x] 스케줄 시트의 선석 색상 변경 ✅ 2024-04-30
 - [x] 스케줄 시트의 하역기명 옆에 하역기 상태 셀 배경색으로 표시 ✅ 2024-04-30
-- [ ] ai 작업자 비교 시트에 ai plan을 수정한 작업자 계획이 나란히 표시되도록 표시 로직 수정
+- [x] ai 작업자 비교 시트에 ai plan을 수정한 작업자 계획이 나란히 표시되도록 표시 로직 수정 ✅ 2024-05-29
 
 #### 비교 테이블에 같은 배인지 아닌지 확인하는 방법
 먼저 ai 테이블을 표시하고 나서 사람 plan을 표시하려고 하지 말고
