--- a/다울 2024-05-02.md
+++ b/다울 2024-05-02.md
@@ -9,8 +9,7 @@ tags:
 Tomorrow: [[다울 2024-05-03]]
 
 ## 오늘 작업 목표
-- [ ] 엑셀에 5월달 일정 정리
-- [ ] 
+- [x] 엑셀에 5월달 일정 정리 ✅ 2024-05-29
 [[../noGitSync/회의/0423 장재석이사님 AI 회의|0423 장재석이사님 AI 회의]]
 [[../noGitSync/회의/0424 김종광 이사님 하역계획 회의|0424 김종광 이사님 하역계획 회의]]
 [[../noGitSync/0425 하작계 최규동상무님 리뷰|0425 하작계 최규동상무님 리뷰]]
