--- a/다울 2024-05-17.md
+++ b/다울 2024-05-17.md
@@ -4,7 +4,6 @@ created: 2024-05-17 08:06
 aliases: 
 tags:
 ---
-- [ ] 나스 솔루션 link, source 백업하기
 Yesterday: [[다울 2024-05-16]]
 다음 주 월 : [[다울 2024-05-20]]
 
@@ -676,7 +675,7 @@ Stack Overflow와 같은 개발자 커뮤니티에서 질문하고 답변을 받
 하지만 둘 사이에는 중요한 차이점이 있습니다.
 
 ###### 델리게이트
-![[journals/temp/델리게이트]]
+![[temp/델리게이트 in CSharp]]
 
 
 [[temp/CSharp 이벤트를 직접 구현|CSharp 이벤트를 직접 구현]]
