--- a/다울 2024-05-20.md
+++ b/다울 2024-05-20.md
@@ -11,9 +11,8 @@ Tomorrow: [[다울 2024-05-21]]
 ## 오늘 작업 목표
 - [x] AI 요청 팝업에서 로딩중 프로그래스바 표시 까지만 일단 동작 ✅ 2024-05-17
 - [x] 비교 시트에 확정 컬럼의 버튼이 AI, 작업자 하나만 선택되도록 수정 ✅ 2024-05-20
-- [ ] PLAN 테이블에서 ORDER2의 DECISION 1인 애들 외에는 전부 초기화하고 새로운 데이터(지금은 디버그데이터)가 INSERT 되도록 
+- [x] PLAN 테이블에서 ORDER2의 DECISION 1인 애들 외에는 전부 초기화하고 새로운 데이터(지금은 디버그데이터)가 INSERT 되도록 ✅ 2024-05-29
 - [x] 하역계획편성팝업에서 셀클릭 하역계획을 임시계획 시트에 표시 ✅ 2024-05-20
-- [ ] 
 90 100 55 63 55 123
 
 
