--- a/다울 2024-05-21.md
+++ b/다울 2024-05-21.md
@@ -12,7 +12,7 @@ Tomorrow: [[다울 2024-05-22]]
 ## 오늘 작업 목표
 - [x] 화면개선 요청사항 문서작업 ✅ 2024-05-22
 - [x] 할일 엑셀 리스트로 만들어서 김종광 이사님 제출 ✅ 2024-05-22
-- [ ] 화면계획서 문서작업
+- [x] 화면계획서 문서작업 ✅ 2024-05-29
 
 [[../noGitSync/회의/다울 회의 2024-05-21 김종광 화면 리뷰|다울 회의 2024-05-21 김종광 화면 리뷰]]
 
