--- a/다울 2024-04-03.md
+++ b/다울 2024-04-03.md
@@ -4,7 +4,6 @@ created: 2024-04-03 08:02
 aliases: 
 tags:
 ---
-- [ ] 나스 솔루션 link, source 백업하기
 Yesterday: [[다울 2024-04-02]]
 Tomorrow: [[다울 2024-04-04]]
 
@@ -18,9 +17,9 @@ Tomorrow: [[다울 2024-04-04]]
 - [x] disp_text를 화면에 보여주는 기능 ✅ 2024-04-03
 드롭 후에 tag 정보를 바탕으로 cell paint 이벤트를 사용할 계획
 - [x] 선택선박정보에서 Drag&Drop으로 선석배치 (~04.03) ✅ 2024-04-03
-- [ ] 선석배치된 선박을 Drag&Drop으로 선석이동	(~04.05)
-- [ ] 선석배치된 선박을 Drag&Drop으로 일정변경	(~04.08)
-- [ ] 연구노트 
+- [x] 선석배치된 선박을 Drag&Drop으로 선석이동	(~04.05) ✅ 2024-05-29
+- [x] 선석배치된 선박을 Drag&Drop으로 일정변경	(~04.08) ✅ 2024-05-29
+- [x] 연구노트 ✅ 2024-05-29
 
 ### CSHARP 폴더의 OBJ 폴더
 여기는 컴파일 관련?
