--- a/다울 2024-04-05.md
+++ b/다울 2024-04-05.md
@@ -11,9 +11,9 @@ Yesterday: [[다울 2024-04-04]]
 ## 오늘 작업 목표
 [[../noGitSync/다울 4월 개인 업무 일정|다울 4월 개인 업무 일정]]
 
-- [ ] 선석배치된 선박을 Drag&Drop으로 일정이동 (~04.05)
-- [ ] 선석배치된 선박을 Drag&Drop으로 일정삭제 (~04.08)
-- [ ] 선석배치된 선박에 대한 이안기능 (~04.12)
+- [x] 선석배치된 선박을 Drag&Drop으로 일정이동 (~04.05) ✅ 2024-05-29
+- [x] 선석배치된 선박을 Drag&Drop으로 일정삭제 (~04.08) ✅ 2024-05-29
+- [x] 선석배치된 선박에 대한 이안기능 (~04.12) ✅ 2024-05-29
 - [x] 연구보고서 ✅ 2024-04-05
 - [x] 과제수행일지 ✅ 2024-04-05
 	- 과제수행일지에서 다음달로 넘어가면 지난 달 작업은 뺀다.
