--- a/다울 2024-04-09.md
+++ b/다울 2024-04-09.md
@@ -13,9 +13,9 @@ Yesterday: [[다울 2024-04-08]]
 	- [x] 드롭 시에 테그에 m_flag 정보 x s m e 정보를 저장 ✅ 2024-04-09 UpdateCellWithTagAndColor() 메서드 
 - [x] 입항 예정정보 insert하고 시트에 태그 저장할 때 select max(dw_seq)로 가져온 dw_seq도 키벨류 저장 ✅ 2024-04-09
 - [x] 선석배치된 선박을 Drag&Drop으로 일정삭제 (~04.08) ✅ 2024-04-11
-- [ ] 선석배치된 선박에 대한 이안기능 (~04.12)
-- [ ] 선석작업현황 그림 왜 안나오는지 찾아야함.
-- [ ] db에 대해서 들은 거 이해하기
+- [x] 선석배치된 선박에 대한 이안기능 (~04.12) ✅ 2024-05-29
+- [x] 선석작업현황 그림 왜 안나오는지 찾아야함. ✅ 2024-05-29
+- [x] db에 대해서 들은 거 이해하기 ✅ 2024-05-29
 
 
 
