--- a/다울 2024-04-16.md
+++ b/다울 2024-04-16.md
@@ -9,11 +9,11 @@ Yesterday: [[다울 2024-04-15]]
 Tomorrow: [[다울 2024-04-17]]
 
 ## 오늘 작업 목표
-- [ ] 선석배치된 선박에 대한 이안기능 (~04.12)
+- [x] 선석배치된 선박에 대한 이안기능 (~04.12) ✅ 2024-05-29
 - [x] compareSpread 삭제 버튼 기능 ✅ 2024-04-15
-- [ ] 선석작업현황 그림 왜 안나오는지 찾아야함.
-- [ ] drawLine할 때 조건 수정해야함
-- [ ] redLine이 그려질 때 조건 거꾸로는 안 가야하고
+- [x] 선석작업현황 그림 왜 안나오는지 찾아야함. ✅ 2024-05-29
+- [x] drawLine할 때 조건 수정해야함 ✅ 2024-05-29
+- [x] redLine이 그려질 때 조건 거꾸로는 안 가야하고 ✅ 2024-05-29
 [[../noGitSync/김종광이사님 리뷰 수정사항]]
 
 슬라이스는 빨간선
