--- a/다울 2024-04-29.md
+++ b/다울 2024-04-29.md
@@ -11,11 +11,10 @@ Tomorrow: [[다울 2024-04-30]]
 ## 오늘 작업 목표
 - [x] 과제수행일지 ✅ 2024-04-29
 - [x] 선박 상세정보 단위표시 ✅ 2024-04-29
-- [ ] 김종광이사님 db 수정사항으로 인한 코드 수정
+- [x] 김종광이사님 db 수정사항으로 인한 코드 수정 ✅ 2024-05-29
 	- [x] 조회 ✅ 2024-04-29
 	- [x] 입력 ✅ 2024-04-29
 	- [x] 수정 기능 수정해야 ✅ 2024-04-29
-	- [ ] 이안
 
 
 ##### 이안
