--- a/다울 2024-05-28.md
+++ b/다울 2024-05-28.md
@@ -4,15 +4,14 @@ created: 2024-05-28 08:08
 aliases: 
 tags:
 ---
-- [ ] 나스 솔루션 link, source 백업하기
 Yesterday: [[다울 2024-05-27]]
 Tomorrow: [[다울 2024-05-29]]
 
 ## 오늘 작업 목표
-- [ ] ai 작업자 비교 시트에 짝 만들어주는 기능 이상 수정
-- [ ] AI 작업자 비교 시트에 수동편성 계획의 조체선료 표시 
-- [ ] PLAN 초기화
-- [ ] AI작업자비교결과 선택(체크박스)에 따른 확정편성지시 저장
+- [x] ai 작업자 비교 시트에 짝 만들어주는 기능 이상 수정 ✅ 2024-05-28
+- [x] AI 작업자 비교 시트에 수동편성 계획의 조체선료 표시 ✅ 2024-05-28
+- [x] PLAN 초기화 ✅ 2024-05-28
+
 
 점심먹고 나스 백업
 
