--- a/다울 2024-05-29.md
+++ b/다울 2024-05-29.md
@@ -15,7 +15,7 @@ Tomorrow: [[다울 2024-05-30]]
 ## 오늘 작업 목표
 - [ ] AI작업자비교결과 선택(체크박스)에 따른 확정편성지시 저장
 - [x] 드래그 상태. 이벤트 동작 로직 수정 ✅ 2024-05-29
-- [ ] 이안한 선박이면 빨간선
+- [x] 이안한 선박이면 빨간선 ✅ 2024-05-31
 - [ ] 하역기 팝업 완성
 - [ ] drawLine할 때 조건 수정해야함
 - [ ] redLine이 그려질 때 조건 거꾸로는 안 가야하고
