--- a/다울 2024-05-30.md
+++ b/다울 2024-05-30.md
@@ -4,6 +4,7 @@ created: 2024-05-30 08:10
 aliases: 
 tags: [다울일간노트]
 ---
+- [x] 나스 솔루션 link, source 백업하기 ✅ 2024-05-30
 Yesterday: [[다울 2024-05-29]]
 Tomorrow: [[다울 2024-05-31]]
 
