--- a/다울 2024-05-29.md
+++ b/다울 2024-05-29.md
@@ -13,15 +13,10 @@ Tomorrow: [[다울 2024-05-30]]
 > — <cite>Daisaku Ikeda</cite>
 
 ## 오늘 작업 목표
-- [ ] AI작업자비교결과 선택(체크박스)에 따른 확정편성지시 저장
+- [x] AI작업자비교결과 선택(체크박스)에 따른 확정편성지시 저장 ✅ 2024-06-10
 - [x] 드래그 상태. 이벤트 동작 로직 수정 ✅ 2024-05-29
 - [x] 이안한 선박이면 빨간선 ✅ 2024-05-31
-- [ ] 하역기 팝업 완성
-- [ ] drawLine할 때 조건 수정해야함
-- [ ] redLine이 그려질 때 조건 거꾸로는 안 가야하고
-- [ ] 바깥에 드롭하면 삭제 (삭제할 때 마우스 커서 변경)
-- [ ] 슬라이스가 있으면 합치기도 만들어야함
-- [ ] 탭컨트롤로 만든 시트로 인해 hitTest의 viewportInfo에서 발생하는 에러. 화면에서 클릭한 좌표와 중첩된 다른 시트로 인해 rIdx, cIdx값이 다르게 들어감.
+
 
 
 
