--- a/다울 2024-06-03.md
+++ b/다울 2024-06-03.md
@@ -14,9 +14,8 @@ Tomorrow: [[다울 2024-06-04]]
 
 
 ## 오늘 작업 목표
-- [ ] 셀클릭 삭제 시 확인 메시지 제거
-- [ ] 삭제 시 refresh()
-- [ ] 
+- [x] 셀클릭 삭제 시 확인 메시지 제거 ✅ 2024-06-04
+- [x] 삭제 시 refresh() ✅ 2024-06-04
 [[temp/다울 회의 2024-06-03 15시|다울 회의 2024-06-03 15시]]
 
 
