--- a/다울 2024-06-12.md
+++ b/다울 2024-06-12.md
@@ -17,12 +17,12 @@ Tomorrow: [[다울 2024-06-13]]
 - [ ] 하역기 팝업 완성
 - [ ] AI프로그램 실행요청
 - [ ] AI프로그램 처리완료검사
-- [ ] 해송적치계획 화면 계획 만들고
-- [ ] 오창민 부장님께 작업 내용 전달
+- [x] 해송적치계획 화면 계획 만들고 ✅ 2024-06-13
+- [x] 오창민 부장님께 작업 내용 전달 ✅ 2024-06-13
 
 [[../noGitSync/오창민 부장님 해송적치계획 화면 전달내용]]
 
-
+[[../3. Resource/Templates/다울일간노트|다울일간노트]]
 
 - [ ] drawLine할 때 조건 수정해야함
 - [ ] redLine이 그려질 때 조건 거꾸로는 안 가야하고
