--- a/다울 2024-06-18.md
+++ b/다울 2024-06-18.md
@@ -20,9 +20,19 @@ Tomorrow: [[다울 2024-06-19]]
 
 
 ## 배운 것
+
+###### Visual Studio의 CSPROJ 파일
+![[journals/temp/Visual Studio의 CSPROJ 파일]]
+
+
+
+
 ### FarPoint Spread 4.0.305에서 FPSpread의 컬럼 헤더를 2줄로 설정하는 방법
 
-FarPoint Spread는 유연한 그리드 및 스프레드시트 기능을 제공하는 강력한 도구입니다. 컬럼 헤더를 여러 줄로 설정하는 것은 데이터의 가독성을 높이는 데 유용할 수 있습니다. 여기서는 FarPoint Spread 4.0.305에서 컬럼 헤더를 2줄로 설정하는 방법을 설명하겠습니다.
+FarPoint Spread는 
+유연한 그리드 및 스프레드시트 기능을 제공하는 강력한 도구입니다. 
+컬럼 헤더를 여러 줄로 설정하는 것은 데이터의 가독성을 높이는 데 유용할 수 있습니다. 
+여기서는 FarPoint Spread 4.0.305에서 컬럼 헤더를 2줄로 설정하는 방법을 설명하겠습니다.
 
 #### 1. FarPoint Spread 컨트롤 추가
 프로젝트에 FarPoint Spread 컨트롤을 추가합니다. Visual Studio의 툴박스에서 "FpSpread"를 폼에 드래그 앤 드롭합니다.
