--- a/다울 2024-06-28.md
+++ b/다울 2024-06-28.md
@@ -6,7 +6,7 @@ tags: [다울일간노트]
 ---
 - [x] 나스 솔루션 link, source 백업하기 ✅ 2024-06-28
 Yesterday: [[다울 2024-06-27]]
-Tomorrow: [[다울 2024-06-29]]
+다음주 월: [[다울 2024-07-01]]
 
 ### Wiseman says,
 > When people are like each other they tend to like each other.
