--- a/다울 2024-07-02.md
+++ b/다울 2024-07-02.md
@@ -4,7 +4,7 @@ created: 2024-07-02 07:58
 aliases: 
 tags: [다울일간노트]
 ---
-- [ ] 나스 솔루션 link, source 백업하기
+- [x] 백업 안했음
 Yesterday: [[다울 2024-07-01]]
 Tomorrow: [[다울 2024-07-03]]
 
@@ -16,9 +16,7 @@ Tomorrow: [[다울 2024-07-03]]
 ## 오늘 작업 목표
 - [x] 확정 버튼 클릭으로 Order에 확정편성 저장 기능 수정 ✅ 2024-07-02
 - [x] 스케쥴에서 하역계획 조회 시 하역기별 하역량 합계 표시 ✅ 2024-07-02
-- [ ] 하역계획 스케쥴 클릭 인서트 기능 수정. 
-- [ ] 스케쥴 요일 표시. 오늘(today) 표시 방법 변경
-- [ ] 하역계획 팝업 WINDOW LOCATION 선석에 따라 다르게
+
 
 대충 1200 T/H 로 잡고
 12시간이면 14400 되겠네.
