--- a/다울 2024-06-21.md
+++ b/다울 2024-06-21.md
@@ -14,12 +14,12 @@ Tomorrow: [[다울 2024-06-22]]
 
 
 ## 오늘 작업 목표
-- [ ] 하역기 팝업 완성
+- [x] 하역기 팝업 완성 ✅ 2024-07-17
 	- [x] 하역기 팝업 하역기별 하역량 수정 삭제 기능 완성 ✅ 2024-06-21
-	- [ ] ui 변경은 ai 프로그램  요청 처리완료 검사 이후에 하자.
+	- [x] ui 변경은 ai 프로그램  요청 처리완료 검사 이후에 하자. ✅ 2024-07-17
 - [x] 선박 잔량 표시 수정. ✅ 2024-06-21
-- [ ] AI프로그램 실행요청
-- [ ] AI프로그램 처리완료검사
+- [x] AI프로그램 실행요청 ✅ 2024-07-17
+- [x] AI프로그램 처리완료검사 ✅ 2024-07-17
 
 
 ```sql
