--- a/다울 2024-07-24.md
+++ b/다울 2024-07-24.md
@@ -19,240 +19,20 @@ Tomorrow: [[다울 2024-07-25]]
 
 
 ## 배운 것
-### Dictionary 확장 메서드에서 Nullable DateTime 값 처리하기
-
-`DateTime?` (nullable) 값을 처리할 수 있도록 기존 `GetValue` 메서드를 확장할 수 있습니다. 다음은 이를 구현한 코드입니다:
-
-```csharp
-public static T GetValue<T>(this Dictionary<string, object> dictionary, string key)
-{
-    if (dictionary.ContainsKey(key))
-    {
-        var value = dictionary[key];
-        if (value is T returnValue)
-        {
-            return returnValue;
-        }
-        else if (value != null)
-        {
-            try
-            {
-                // 대상 타입이 nullable 타입인지 확인합니다.
-                var targetType = Nullable.GetUnderlyingType(typeof(T)) ?? typeof(T);
-                return (T)Convert.ChangeType(value, targetType);
-            }
-            catch (InvalidCastException)
-            {
-                throw new InvalidCastException($"The value for key '{key}' cannot be cast to type {typeof(T)}.");
-            }
-        }
-        else if (value == null)
-        {
-            // T가 nullable value type인 경우 처리합니다.
-            if (typeof(T).IsValueType && Nullable.GetUnderlyingType(typeof(T)) == null)
-            {
-                throw new InvalidCastException($"The value for key '{key}' cannot be cast to type {typeof(T)}.");
-            }
-            return default;
-        }
-    }
-    throw new KeyNotFoundException($"The key '{key}' was not found in the dictionary.");
-}
-```
-
-### 설명
-1. **키 존재 여부 확인**: 딕셔너리에 해당 키가 있는지 확인합니다.
-2. **직접 타입 일치**: 값이 직접적으로 `T` 타입이면 그대로 반환합니다.
-3. **널이 아닌 경우 변환**: 값이 널이 아닌 경우, 원하는 타입으로 변환을 시도합니다.
-4. **Nullable 타입 처리**: `Nullable.GetUnderlyingType(typeof(T)) ?? typeof(T)`을 사용하여 nullable 타입을 올바르게 처리합니다.
-5. **널 값 처리**: 값이 널인 경우, `T`가 널을 수용할 수 있는지 (참조 타입 또는 nullable value type인지) 확인합니다.
-6. **예외 처리**: 타입 캐스팅이 불가능하거나 키가 없는 경우 적절한 예외를 발생시킵니다.
-
-### 사용 예제
-다음은 nullable `DateTime` 값을 포함한 딕셔너리와 함께 이 메서드를 사용하는 예제입니다:
-
-```csharp
-var dictionary = new Dictionary<string, object>
-{
-    { "date1", new DateTime(2023, 7, 24) },
-    { "date2", null }
-};
-
-DateTime? date1 = dictionary.GetValue<DateTime?>("date1");
-DateTime? date2 = dictionary.GetValue<DateTime?>("date2");
-```
-
-### 요약
-1. nullable 타입을 처리할 수 있도록 메서드 확장.
-2. `Nullable.GetUnderlyingType`를 사용하여 올바른 타입 변환.
-3. 참조 타입 및 nullable value 타입과 호환되는 null 값 처리.
-4. 타입 캐스팅 문제와 키가 없는 경우 예외 처리.
-
-### 질문
-Q1: 이 메서드를 더 복잡한 시나리오에 맞게 개선하려면 어떻게 해야 할까요?
-Q2: C#에서 딕셔너리에 유용한 다른 확장 메서드는 어떤 것이 있을까요?
+###### Dictionary 확장 메서드에서 Nullable DateTime 값 처리하기
+![[journals/temp/Dictionary 확장 메서드에서 Nullable DateTime 값 처리하기]]
 
 
-### TextBox에 단축키 이벤트 추가하기
-
-Windows Forms 애플리케이션에서 TextBox에 단축키 이벤트를 추가하려면 `KeyDown` 이벤트를 사용하여 특정 키 조합을 감지하고 원하는 동작을 수행할 수 있습니다. 다음은 예제 코드입니다.
-
-### 예제 코드
-```csharp
-// Form 생성자에서 TextBox와 이벤트 핸들러를 설정합니다.
-public Form1()
-{
-    InitializeComponent();
-
-    // TextBox를 만듭니다.
-    TextBox textBox = new TextBox
-    {
-        Location = new Point(10, 10),
-        Width = 200
-    };
-
-    // KeyDown 이벤트 핸들러를 추가합니다.
-    textBox.KeyDown += TextBox_KeyDown;
-
-    // Form에 TextBox를 추가합니다.
-    this.Controls.Add(textBox);
-}
-
-// KeyDown 이벤트 핸들러
-private void TextBox_KeyDown(object sender, KeyEventArgs e)
-{
-    // 예: Ctrl + S 단축키
-    if (e.Control && e.KeyCode == Keys.S)
-    {
-        // 단축키가 눌렸을 때 수행할 동작을 여기에 작성합니다.
-        MessageBox.Show("Ctrl + S pressed!");
-        
-        // 다른 키 처리를 막기 위해 이벤트를 처리했다고 표시합니다.
-        e.Handled = true;
-    }
-    // 예: Alt + C 단축키
-    else if (e.Alt && e.KeyCode == Keys.C)
-    {
-        // 단축키가 눌렸을 때 수행할 동작을 여기에 작성합니다.
-        MessageBox.Show("Alt + C pressed!");
-
-        // 다른 키 처리를 막기 위해 이벤트를 처리했다고 표시합니다.
-        e.Handled = true;
-    }
-}
-```
-
-### 설명
-1. **TextBox 생성 및 설정**: Form 생성자에서 TextBox를 생성하고 위치와 크기를 설정합니다.
-2. **KeyDown 이벤트 핸들러 추가**: TextBox의 `KeyDown` 이벤트에 핸들러를 추가합니다.
-3. **KeyDown 이벤트 핸들러 구현**: 특정 키 조합(Ctrl + S, Alt + C 등)을 감지하고, 해당 단축키가 눌렸을 때 수행할 동작을 정의합니다.
-4. **이벤트 처리 표시**: `e.Handled = true;`로 설정하여 다른 키 처리를 막습니다.
-
-### 요약
-1. TextBox를 생성하고 Form에 추가합니다.
-2. KeyDown 이벤트 핸들러를 추가합니다.
-3. 특정 키 조합을 감지하고 원하는 동작을 수행합니다.
-4. 이벤트가 처리되었음을 표시하여 다른 키 처리를 막습니다.
-
-### 질문
-Q1: 다양한 TextBox 컨트롤에서 동일한 단축키 이벤트를 공유하려면 어떻게 해야 할까요?
-Q2: 다른 단축키(예: Ctrl + Z, Ctrl + Y)를 추가하려면 코드를 어떻게 확장할 수 있을까요?
 
 
-### 윈폼 버튼에 이미지 설정하는 방법
+###### TextBox에 단축키 이벤트 추가하기
+![[journals/temp/TextBox에 단축키 이벤트 추가하기]]
 
-윈도우 폼(WinForms) 애플리케이션에서 버튼 컨트롤에 이미지를 설정하는 방법은 여러 가지가 있습니다. 주로 리소스 이미지를 사용하여 버튼에 이미지를 설정하는 세 가지 방법을 소개합니다.
 
-### 방법 1: 디자이너를 사용하여 버튼에 이미지 설정
 
-#### 순서
-1. **이미지 리소스 추가**:
-   - 프로젝트에서 `솔루션 탐색기`를 열고 프로젝트 이름을 마우스 오른쪽 버튼으로 클릭한 후, `속성`을 선택합니다.
-   - `리소스` 탭을 선택하고, 이미지 리소스를 추가합니다.
+###### 윈폼 버튼에 이미지 설정하는 방법
+![[journals/temp/윈폼 버튼에 이미지 설정하는 방법]]
 
-2. **버튼에 이미지 설정**:
-   - `디자인` 창에서 버튼을 선택합니다.
-   - `속성` 창에서 `Image` 속성을 찾습니다.
-   - 드롭다운을 클릭하여 `프로젝트 리소스 파일`에서 원하는 이미지를 선택합니다.
-
-### 방법 2: 코드에서 리소스 이미지를 사용하여 버튼에 이미지 설정
-
-#### 순서
-1. **이미지 리소스 추가**: 위와 동일하게 리소스 이미지를 프로젝트에 추가합니다.
-
-2. **코드에서 버튼에 이미지 설정**:
-   - `Form`의 코드 파일을 엽니다.
-   - `Load` 이벤트나 적절한 위치에서 버튼에 이미지를 설정합니다.
-
-```csharp
-// Form1.cs
-using System;
-using System.Windows.Forms;
-
-public partial class Form1 : Form
-{
-    public Form1()
-    {
-        InitializeComponent();
-    }
-
-    private void Form1_Load(object sender, EventArgs e)
-    {
-        // 버튼에 이미지 설정
-        button1.Image = Properties.Resources.MyImage; // MyImage는 리소스의 이름
-    }
-}
-```
-
-### 방법 3: 이미지 리스트를 사용하여 버튼에 이미지 설정
-
-#### 순서
-1. **이미지 리소스 추가**: 위와 동일하게 리소스 이미지를 프로젝트에 추가합니다.
-
-2. **이미지 리스트 생성 및 설정**:
-   - `디자인` 창에서 `ImageList` 컨트롤을 폼에 추가합니다.
-   - `속성` 창에서 `Images` 속성을 선택하고, 리소스 이미지를 추가합니다.
-
-3. **코드에서 이미지 리스트를 버튼에 설정**:
-   - `Form`의 코드 파일을 엽니다.
-   - `Load` 이벤트나 적절한 위치에서 버튼에 이미지를 설정합니다.
-
-```csharp
-// Form1.cs
-using System;
-using System.Windows.Forms;
-
-public partial class Form1 : Form
-{
-    public Form1()
-    {
-        InitializeComponent();
-
-        // 이미지 리스트 생성 및 설정
-        ImageList imageList = new ImageList();
-        imageList.Images.Add(Properties.Resources.MyImage); // MyImage는 리소스의 이름
-
-        // 버튼에 이미지 리스트 설정
-        button1.ImageList = imageList;
-        button1.ImageIndex = 0;
-    }
-
-    private void Form1_Load(object sender, EventArgs e)
-    {
-        // 버튼에 이미지 설정 (이미지 리스트와 인덱스를 사용하여 설정)
-        button1.Image = imageList.Images[0];
-    }
-}
-```
-
-### 요약
-
-1. **디자이너를 사용하여 이미지 설정**:
-   - 리소스 이미지를 추가하고, 속성 창에서 이미지를 선택합니다.
-2. **코드에서 리소스 이미지를 설정**:
-   - `Form`의 코드 파일에서 `Properties.Resources`를 사용하여 이미지를 설정합니다.
-3. **이미지 리스트를 사용하여 이미지 설정**:
-   - `ImageList`를 사용하여 여러 이미지를 관리하고, 버튼에 설정합니다.
 
 ### 질문
 
