--- a/다울 2024-04-18.md
+++ b/다울 2024-04-18.md
@@ -12,7 +12,7 @@ Tomorrow: [[다울 2024-04-19]]
 [[../noGitSync/김종광이사님 리뷰 수정사항|김종광이사님 리뷰 수정사항]]
 [[temp/장재석 이사님 ai 질문 모음|장재석 이사님 ai 질문 모음]]
 [[../noGitSync/다울 4월 개인 업무 일정|다울 4월 개인 업무 일정]]
-[[선석작업현황 수정]]
+[[../noGitSync/선석작업현황 수정]]
 ###### ai 하역계획 회의 내용
 ![[../noGitSync/회의/ai 하역계획 회의 내용 0418]]
 
