--- a/다울 2024-07-11.md
+++ b/다울 2024-07-11.md
@@ -18,7 +18,7 @@ Tomorrow: [[다울 2024-07-12]]
 - [x] 하역팝업 디자인 변경 ✅ 2024-07-11
 - [ ] 선석현황
 
-[[temp/선석작업현황 수정|선석작업현황 수정]]
+[[../noGitSync/선석작업현황 수정|선석작업현황 수정]]
 
 
 
