--- a/다울 2024-07-11.md
+++ b/다울 2024-07-11.md
@@ -14,7 +14,7 @@ Tomorrow: [[다울 2024-07-12]]
 
 
 ## 오늘 작업 목표
-- [ ] 유니티 화면 전환.
+- [x] 유니티 화면 전환. ✅ 2024-08-06
 - [x] 하역팝업 디자인 변경 ✅ 2024-07-11
 - [ ] 선석현황
 
