--- a/다울 2024-08-05.md
+++ b/다울 2024-08-05.md
@@ -4,8 +4,8 @@ created: 2024-08-05 08:04
 aliases: 
 tags: [다울일간노트]
 ---
-- [ ] 나스 솔루션 link, source 백업하기
-Yesterday: [[다울 2024-08-04]]
+- [x] 나스 솔루션 link, source 백업하기 ✅ 2024-08-06
+지난 주 목: [[다울 2024-08-01]]
 Tomorrow: [[다울 2024-08-06]]
 
 ### Wiseman says,
